--- a/_posts/2022-09-29-깃허브 블로그 테마 변경.md
+++ b/_posts/2022-09-29-깃허브 블로그 테마 변경.md
@@ -1,8 +1,117 @@
 ---
 title: "2022-09-29 깃허브 블로그 테마 변경"
 categories: blog
-tags: ["깃허브 블로그"]
+tags: [깃허브 블로그]
 ---
 
 
 
+
+
+시간을 투자해 드디어 깃허브 블로그 테마를 변경했다. 기존의 **minimal-mistake**의 테마는 개인적으로 빈공간이 너무 넓고 기본 폰트 사이즈가 너무 커서 가독성이 오히려 떨어진다고 생각이 되었다. 테마를 다시 찾기 위해서 여기 저기 뒤적이고 데모도 많이 봤지만 가장 맘에 들었던 것은 두가지였다.
+
+
+
+# 1) 테마선정
+
+
+
+1. Jekyll-theme-yat
+
+   
+
+   사실 가장 하고 싶었던 테마이지만, yat 자체의 설명이 잘 되어있지않아 튜토리얼도 하기 힘들었고, 잘 사용하지 않는 theme인지 도움을 받을 만한 글이나 블로그가 찾아지지 않아서 커스텀 도중에 포기하고 다른 테마를 찾았다.
+
+   
+
+   ![demo-screenshot](https://user-images.githubusercontent.com/9413601/91842897-6a840b00-ec87-11ea-95ca-52abcc1ac063.png)
+
+
+
+2. Jekyll-theme-chirpy
+
+   
+
+   yat을 포기하고 찾은 chirpy는 자체 튜토리얼 설명이 잘되어있었고, 사람들의 리뷰나 블로그에 적용하는 방법들에 대한 설명이 잘되어 있었다.
+
+   이때만 해도 너무 드디어 순탄하게 연결할 수 있을거라 생각했다. 하지만 문제는 그다음에 있었다... 
+
+   ![Devices Mockup](https://raw.githubusercontent.com/cotes2020/chirpy-images/main/commons/devices-mockup.png)
+
+   
+
+
+
+# 2) 테마 적용 고군분투...
+
+
+
+chirpy 테마를 적용하신 **J1mmyson님, 하얀눈길님** 블로그를 참고하면서 열심히 따라 만들고 로컬에서 잘 만들어진 모습을 보고 흐뭇하게 github에 push하고 나니 다음과 같은 에러가 발생했다.
+
+
+
+[chirpy 테마 이슈](https://github.com/cotes2020/jekyll-theme-chirpy/issues/578) (에러가 났을 때, 기록할 생각을 못해서 chirpy 이슈에 나와 똑같은 에러가 나셨던 분의 사진을 참고했다)
+
+
+
+1. 에러가 난 github 블로그 페이지
+
+![image](https://user-images.githubusercontent.com/41880719/169641692-32a1f04e-06ce-4acf-b492-6b95cd015979.png)
+
+2. 에러가 발생한 github CI/CD
+
+   
+
+![image](https://user-images.githubusercontent.com/11676357/153573789-74bd6a7c-4858-4490-a222-fd9af2efec0e.png)
+
+
+
+로컬에서는 잘나오던 화면이 다음과 같이 빈페이지로 나오며, CI/CD에서 이유를 알수 없는 에러가 발생했다. 다행히 검색해보니 나와 동일한 문제를 가지셨던 분이 계셔서 해결하신 방법을 참고해서 그대로 따라해보았다.
+
+
+
+[참고한 a87380.log님의 velog](https://velog.io/@a87380/Jekyll-Theme-Chirpy%EB%A1%9C-%EB%B0%94%EA%BE%B8%EB%8D%98-%EC%A4%91-%EB%82%AC%EB%8D%98-%EC%97%90%EB%9F%AC) 
+
+![image-20220929143047356](C:\Users\juni2\projects\choi2021.github.io\images\2022-09-29-깃허브 블로그 테마 변경\image-20220929143047356.png)
+
+bash tools/init.sh 를 한뒤에 bundle을 다시 해주라는 글을 읽고 다시 해봤지만 오히려 미리 추가해둔 _post내의 내 글들이 다 사라져버렸다.
+
+(이때는 몰랐다 bash tools/init.sh가 chirpy 내의 데모용 설정들을 삭제하는 명령어였는지...)
+
+사라진 내용들에 너무 당황했지만 다행히 따로 보관해놓아서 다행히 글들을 다 날려버린건 아니었다. 하지만 계속해서 문제가 발생하니 어떻게 해야할지 모르겠다는 생각이 들었다.  원래 테마는 너무 하기 싫어서....
+
+
+
+그래도 잠시 고민끝에 든 생각은 **나와 비슷하게 겪은 사람이 있지 않을까** 였다. 이런 에러를 나만 가지고 있지는 않다는 생각과 테마 자체적인 현재 문제면 포기하자는 마음에 우선 chirpy 테마의 github 레포에 들어가서 issue를 보았다.
+
+[jekyll-theme-chirpy의 open issues](https://github.com/cotes2020/jekyll-theme-chirpy/issues)
+
+![image-20220929143518622](C:\Users\juni2\projects\choi2021.github.io\images\2022-09-29-깃허브 블로그 테마 변경\image-20220929143518622.png)
+
+
+
+issue들 중에서 나와 관련되어 보이는 것이 안보여 이번에는 close에 배포와 관련된 문제니까 deploy를 함께 붙여주었더니 다행히 나와 같은 문제를 가진 사람들이 토론하고 해결방법을 공유한 내용들을 찾을 수 있었다.
+
+
+
+![그림1](C:\Users\juni2\projects\choi2021.github.io\images\2022-09-29-깃허브 블로그 테마 변경\그림1.png)
+
+
+
+위의 문제는 linux와의 연결로  생긴 문제로 다음과 같은 코드로 간단하게 해결할 수 있었다.
+
+```
+bundle lock --add-platform x86_64-linux
+```
+
+
+
+드디어 새롭게 보다 깔끔한 테마로 바꿀 수 있었다.
+
+
+
+![image-20220929144449675](C:\Users\juni2\projects\choi2021.github.io\images\2022-09-29-깃허브 블로그 테마 변경\image-20220929144449675.png)
+
+
+
+에러를 해결해가면서 구글링이 안될 때 어디서부터 잘못된 건지 모르겠어서 괴로워하기도 했지만, 오픈소스 프로젝트들의 문제들은 다른 사람들도 똑같이 겪었을 가능성이 높으므로 이슈를 참고해보면 좋다는 점과, 이슈들을 읽어가면서 개발할 때의 영어의 중요성을 또 한번 느낄 수 있었다.  
