이미지 경로 수정

--- a/_posts/2022-09-08-2022-09-08-TIL.md
+++ b/_posts/2022-09-08-2022-09-08-TIL.md
@@ -18,7 +18,7 @@ tags: [javascript, 문법]
 
 나뉘게 된다.
 
-![image-20220909161745393](C:\Users\juni2\projects\choi2021.github.io\choi2021.github.io\images\2022-09-08-TIL\image-20220909161745393.png)
+![image-20220909161745393](C:\Users\juni2\projects\choi2021.github.io\images\2022-09-08-2022-09-08-TIL\image-20220909161745393.png)
 
 [출처: https://www.guru99.com/difference-compiler-vs-interpreter.html]
 
