--- a/_posts/2022-09-15-class.md
+++ b/_posts/2022-09-15-class.md
@@ -197,9 +197,15 @@ console.log(test1.averageScore);
 test1.averageScore = 70;
 ```
 
+
+
 여기서 중요한 점은 setter를 사용할 때이다. 값을 바로 전달해주면 다음과 같은 에러가 발생한다.
 
-![image-20220916145358546](C:\Users\juni2\projects\choi2021.github.io\choi2021.github.io\images\2022-09-15-class\image-20220916145358546.png)
+
+
+![error](/assets/img/2022-09-15-class/error.png)
+
+
 
 setter함수에 값을 전달해주고 값을 set해줄 때 또다시 값을 setter함수를 호출 하기 때문에 계속해서 반복해서 호출되는 무한 루프를 만들고 다음과 같이 call 스택이 다 차는 에러가 발생한다. 이를 해결하기 위해 다음과 같이 코드를 수정해 주어야 한다.
 
