--- a/_posts/2022-09-17-Built-in 객체.md
+++ b/_posts/2022-09-17-Built-in 객체.md
@@ -14,7 +14,7 @@ tags: [javascript, 문법]
 
 앞서 정리해온 원시형 자료형들 (문자열, 숫자, 불리언 등) 을 사용할 때, 변수에 "."을 붙이면 자동으로 자료형이 사용할 수 있는 메소드가 뜨는걸 볼 수 있다. 원시형 자료형을 선언해도 객체처럼 불러올 수 있는 이유에는, 바로 "."을 사용하면 변수의 자료형에 맞는 wrapper 객체가 감싸지기 때문이다.
 
-![image-20220919022138207](C:\Users\juni2\projects\choi2021.github.io\choi2021.github.io\images\2022-09-17-Built-in 객체\image-20220919022138207-1663605187543-1.png)
+![image-20220919022138207](../assets/img/2022-09-17-Built-in 객체/image-20220919022138207.png)
 
 사진에서 간단하게 str이란 변수를 누르고 "."을 누르면 String wrapper 객체의 다양한 메소드를 사용할 수 있음을 볼 수 있다.
 
