--- a/_posts/2022-02-03-2022-02-03-TIL.md
+++ b/_posts/2022-02-03-2022-02-03-TIL.md
@@ -1,8 +1,5 @@
 # Native prototype
 
-- toc
-  {:toc .large-only}
-
 ![javascript](https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Unofficial_JavaScript_logo_2.svg/210px-Unofficial_JavaScript_logo_2.svg.png)
 
 내가 사용해왔던 `수많은 내장API들은 어디서 온걸까?`이란 의문이 풀리는 순간이었다. 내장객체의 프로토타입에 대해 정리해보려고 한다.
@@ -18,9 +15,7 @@ alert() 함수는 받은 인자를 toString을 이용해 출력해준다. obj에
 
 ## 사실 모두 object..
 
-![reactCompoenent](../../../assets/img/blog/내장객체정리.png)
-
-위 그림은 core javascript의 그림을 다시 만들어 본 것이다. 설명에서 조금 헷갈린 부분이 `.prototype` 와 `.__proto__`의 차이였다.
+ 설명에서 조금 헷갈린 부분이 `.prototype` 와 `.__proto__`의 차이였다.
 
 ```javascript
 console.log(Array.prototype); //Array
