--- a/_posts/2022-09-28.포트폴리오 기획.md
+++ b/_posts/2022-09-28.포트폴리오 기획.md
@@ -10,7 +10,7 @@ tags: ["project", "포트폴리오", "기획"]
 
 1. About me:
 
-   내가 어떤 걸 좋아하고, 어떤 생각을 가진 사람인지를 보여줄 수 있어야한다는 생각이 들었다. 채용과 관련된 영상들을 찾아보면서 회사에서 사람을 뽑을 때, 좀 더 보수적으로 하게 된다고 한다. 새로 뽑은 한 사람때문에 원래 팀이 흔들릴 수도 있기 때문에 같은 목표를 바라보는 사람인지, 회사에 적응할 수 있는 사람인지를 보고 싶어한다. 그리고 내가 궁금해질 수 있게 잘 담아내는 게 중요하다고 생각했다.
+   내가 어떤 걸 좋아하고, 어떤 생각을 가진 사람인지를 보여줄 수 있어야한다는 생각이 들었다. 채용과 관련된 영상들을 찾아보면서 회사에서 사람을 뽑을 때, 좀 더 보수적으로 하게 된다고 한다. 새로 뽑은 한 사람 때문에 원래 팀이 흔들릴 수도 있기 때문에, 같은 목표를 바라보는 사람인지, 회사에 적응할 수 있는 사람인지를 보고 싶어한다. 그렇기 때문에 내가 어떤 사람인지 잘 담아내는 게 중요하다고 생각했다.
 
    - 나를 표현할 수 있는 문장
 
@@ -68,30 +68,55 @@ tags: ["project", "포트폴리오", "기획"]
 
 # 2) 디자인
 
-담을 내용들을 정리한 뒤에 디자인을 한번 생각해보았다. 아마 자주 수정될 수 있지 않을까 생각이 되지만 일단 생각나는 대로 만들어보려고 한다. 애니메이션들은 아직 혼자 구현해내기 어려울 것 같아 우선 라이브러리들을 이용해서 만들어보고, 직접 코드들을 수정해볼 예정이다.
+
+
+담을 내용들을 정리한 뒤에 디자인을 한번 생각해보았다. 아마 자주 수정될 수 있지 않을까 생각이 되지만 일단 생각나는 대로 만들어보려고 한다. 애니메이션들은 아직 혼자 구현해내기 어려울 것 같아 우선 라이브러리들을 이용해서 만들어보고, 직접 코드들을 수정해볼 예정이다. 전반적인 CSS 작업은 styled-components를 이용해볼 예정이다.
+
+
 
 ### 1. Home
 
-Home 화면에는 가장 먼저 페이지를 방문한 사용자가 볼 화면이기 때문에, **인사말**과 간단한 사용방법을 보여주는 화면을 생각했다. 그래서 가장 먼저 떠오른 방식은 인사말을 **Typing** 애니메이션을 이용해서 보여준뒤에 애니메이션이 끝나면 옆을 누를 수 있게 router를 연결해주는 방식이다.
+Home 화면에는 가장 먼저 페이지를 방문한 사용자가 볼 화면이기 때문에, **인사말**과 간단한 사용방법을 보여주는 화면을 생각했다. 그래서 가장 먼저 떠오른 방식은 인사말을 **Typing** 애니메이션을 이용해서 내가 말하고 싶은 이야기로 시작하면 좋을 것 같다는 생각이 들었다.
 
-## 2. Main
 
-메인 페이지에서는 디자인은 위에 정리한 4가지 섹션들을 카드처럼 담고, 카드를 넘기는 가로 스크롤 (carousel)로 적용해보면 어떨까라고 생각했다.
 
 ![img](https://velog.velcdn.com/images%2Fsomangoi%2Fpost%2Fa6205ef6-ab68-45a6-829a-66c48a609c48%2Fscreen-recording.gif)
 
 [출처: Velog somangoi](https://velog.io/@somangoi/%EC%9E%90%EA%B8%B0%EC%86%8C%EA%B0%9C-%ED%8E%98%EC%9D%B4%EC%A7%80-%EB%A7%8C%EB%93%A4%EA%B8%B06-%EC%9E%90%EB%B0%94%EC%8A%A4%ED%81%AC%EB%A6%BD%ED%8A%B8-%ED%83%80%EC%9D%B4%ED%95%91-%ED%9A%A8%EA%B3%BC)
 
+
+
+## 2. Main
+
+#### 2022-09-28 main 디자인
+
+메인 페이지에서는 디자인은 위에 정리한 4가지 섹션들을 카드처럼 담고, 카드를 넘기는 가로 스크롤 (carousel)로 적용해보면 어떨까라고 생각했다.
+
 ![img](https://t1.daumcdn.net/cfile/tistory/26549F505947779F0B)
 
 [출처:블로그 바람사이](https://2pie.tistory.com/m/entry/React-Carousel-%EC%BA%90%EB%9F%AC%EC%85%80?category=707866)
 
-하지만 위 그림처럼 가로 스크롤로 구현하게 되면 세로 스크롤에 비해서 카드가 적을 경우 조금 비어보일 것 같아 3D로 섹션들을 카드로 구성하고 볼 수 있게하면 허전함을 채워줄 수 있겠다는 생각이 들었다.
 
-![image-20220928235129110](../images/2022-09-28.포트폴리오%20기획/image-20220928235129110.png){style="center"}
 
-[출처:https://3dtransforms.desandro.com/carousel](https://davidwalsh.name/demo/3d-carousel.php)
+여기서 메뉴를 상단에 두지 말고 아래에 버튼으로 두고, 버튼을 클릭하게 되면 해당 섹션을 보여주는 애니메이션을 구상했다. carousel 구현하는 방법으로는 우선 직접 슬라이더를 만들어보고, framer motion을 이용해서 페이지 이동을 매끄럽게 연결해주면 어떨까 생각했다.
 
-여기서 메뉴를 상단에 두지 말고 아래에 버튼으로 두고, 버튼을 클릭하게 되면 해당 섹션으로 회전 시켜주는 애니메이션을 생각해봤고, 카드를 클릭하면 해당 페이지로 넘어가서 전체화면으로 확대해줄 수 있게 하는 디자인을 구상해보았다.
 
-여기까지 한 내용을 바탕으로 실제로 구현을 해보고 조금씩 디테일한 부분들을 손봐볼 생각이다.
+
+#### 2022-09-30 main 디자인
+
+![image-20221001035030552](../assets/img/2022-09-28.포트폴리오 기획/image-20221001035030552.png)
+
+ 
+
+ carousel을 이용하기에 너무 내용이 적어, 가로로 펼쳐진 카드 형식으로 만든 다자인으로 수정했다. 카드에 상세한 내용이 적힌 채로 main에 있기보다. 실제로 내가 기획한 와이어 프레임의 모습대로 보여 주는 카드 형식으로 만들면 좀 더 재밌어 보이면서도 간략하게 레이아웃을 보여줄 수 있을 것 같아 디자인에 추가했다.
+
+ 버튼 또는 카드를 누르면 레이아웃대로 만들어 진 화면을 보여주면 될 것 같았고 카드 자체가 데스크탑 화면과 달리 세로가 길기 때문에 모바일 버전을 먼저 고려해서 만들었다.
+
+
+
+
+
+
+
+
+
