--- a/_posts/2022-10-06-HTTP 정리.md
+++ b/_posts/2022-10-06-HTTP 정리.md
@@ -164,19 +164,19 @@ url을 이용해서 요청을 보낼때 어떤 action을 해달라고 할지를 
 
 ### 2. POST
 
-  post는 url 위치에 함께 보내는 body나 form data를 함께 전달해 데이터를 생성할 때 사용하며, 성공시 201 Created를 실패시에  401 Unauthorized, 403 Forbidden, 404 Not found, 409 Confilct와 같은 에러를 받을 수 있다.
+  post는 url 위치에 함께 보내는 body나 form data를 함께 전달해 **데이터를 생성할 때 사용**하며, 성공시 201 Created를 실패시에  401 Unauthorized, 403 Forbidden, 404 Not found, 409 Confilct와 같은 에러를 받을 수 있다.
 
 
 
 ### 3. PUT
 
- put은 url 위치의 데이터를 수정할 때 사용하며, 성공시 200 OK을, 실패시  403 Forbidden, 404 Not found, 405 Method not allowed와 같은 에러를 받을 수 있다.
+ put은 url 위치의 **데이터를 수정할 때 사용**하며, 성공시 200 OK을, 실패시  403 Forbidden, 404 Not found, 405 Method not allowed와 같은 에러를 받을 수 있다.
 
 
 
 ### 4. DELETE
 
-delete는 url위치의 데이터를 삭제할 때 사용하며, 성공시 204 No content를, 실패시 403 Forbidden, 404 Not found, 405 Method not allowed와 같은 에러를 받을 수 있다.
+delete는 url위치의 **데이터를 삭제할 때 사용**하며, 성공시 204 No content를, 실패시 403 Forbidden, 404 Not found, 405 Method not allowed와 같은 에러를 받을 수 있다.
 
 
 
