--- a/_posts/2022-10-26-원티드 프리온보딩-1주 2일차.md
+++ b/_posts/2022-10-26-원티드 프리온보딩-1주 2일차.md
@@ -1,5 +1,5 @@
 ---
-title: "원티드 프리온보딩 1주차 첫째주 과제 수행
+title: "원티드 프리온보딩 1주차 첫째주 과제 수행"
 categories: 원티드프리온보딩
 tags: ["eslint", "prettier", "Git Hook", "Husky", "협업 툴"]
 ---
