과제 코드정리

--- a/_posts/2022-10-25-원티드프리온보딩-1주차.md
+++ b/_posts/2022-10-25-원티드프리온보딩-1주차.md
@@ -246,7 +246,7 @@ prettier가 정상적으로 작동하고 ESLint는 두가지 에러를 던져준
 
 
 
-![image-20221026025333559](../assets/img/2022-10-25-원티드프리온보딩-1주차/image-20221026025333559.png)
+![image-20221026025333559](/assets/img/2022-10-25-원티드프리온보딩-1주차/image-20221026025333559.png)
 
 
 
