--- a/_posts/2022-10-06-원티드 프리온보딩 과제 3편.md
+++ b/_posts/2022-10-06-원티드 프리온보딩 과제 3편.md
@@ -82,7 +82,7 @@ export default TodoItem;
 
 아래 사진은 스타일 링을 완료한 모습이다.
 
-![image-20221007003606559](../assets/img/2022-10-06-원티드 프리온보딩 과제 3편/image-20221007003606559.png)
+![image-20221007003606559](/assets/img/2022-10-06-원티드 프리온보딩 과제 3편/image-20221007003606559.png)
 
 
 
@@ -176,7 +176,7 @@ export default App;
 
 
 
-## Assignmet 5)
+## Assignment 5)
 
 다섯 번째 과제 내용은 다음과 같다.
 
