--- a/_posts/2022-10-26-원티드 프리온보딩-1주 2일차.md
+++ b/_posts/2022-10-26-원티드 프리온보딩-1주 2일차.md
@@ -12,7 +12,7 @@ tags: ["과제"]
 
 
 
-### :wrench: 수정사항
+### 🔨 수정사항
 
 먼저 수정한 부분은 api들을 클래스로 주입해주는 방식이었다. 단순히 함수를 불러와서 쓰는 것이 아니라 index.js에서 instance를 만든 후에 필요한 페이지에 주입하는 방법으로 수정했다. 원래 존재했던 함수들은 method들로 수정했다.
 
