--- a/_posts/2022-10-17-채용공고서비스2.md
+++ b/_posts/2022-10-17-채용공고서비스2.md
@@ -60,8 +60,6 @@ keyword는 flask에서 request로 url의 해당 부분을 가져올 수 있다. 
 
 redirect를 이용해 다시 홈페이지로 보내주는 로직도 추가하고, 이후 export에서도 파일을 사용할 수 있게 db라는 딕셔너리에 저장한다.
 
-
-
 ```python
 #main.py
 @app.route("/search")
@@ -96,7 +94,11 @@ def search():
         <td>{{job.position}}</td>
         <td>{{job.company}}</td>
         <td>{{job.location}}</td>
-        <td><a href="{{job,link}}" target="_blank">Apply this</a></td>
+        <td>
+          <a href={% raw %}"{{job,link}}"{% endraw %} target="_blank"
+            >Apply this</a
+          >
+        </td>
       </tr>
       {%endfor%}
     </tbody>
