--- a/_posts/2022-10-25-원티드프리온보딩-1주차.md
+++ b/_posts/2022-10-25-원티드프리온보딩-1주차.md
@@ -1,7 +1,7 @@
 ---
 title: "원티드 프리온보딩 1주차 1-1 협력툴:ESLint,Prettier,Git Hook, Husky"
 categories: 원티드프리온보딩
-tags: ["eslint", "prettier", "Git Hook", "Husky", "협업 툴"]
+tags: ["과제", "원티드 프리온보딩"]
 ---
 
 
