--- a/_posts/2022-10-26-원티드 프리온보딩-1주 2일차.md
+++ b/_posts/2022-10-26-원티드 프리온보딩-1주 2일차.md
@@ -1,7 +1,7 @@
 ---
 title: "원티드 프리온보딩 1주차 첫째주 과제-best case찾기와 보충공부:context API"
 categories: 원티드프리온보딩
-tags: ["과제"]
+tags: ["과제", "원티드 프리온보딩"]
 ---
 
 # 사전 과제 정리
