--- a/_posts/2022-10-28-원티드 프리온보딩-1주 4일차.md
+++ b/_posts/2022-10-28-원티드 프리온보딩-1주 4일차.md
@@ -1,7 +1,7 @@
 ---
 title: "원티드 프리온보딩 1주차 첫째주 4일차-초기세팅 커밋 합치기"
 categories: 원티드프리온보딩
-tags: ["과제", "1주차"]
+tags: ["과제", "원티드 프리온보딩"]
 ---
 
 # 초기세팅 커밋 합치기
