--- a/_posts/2022-10-27-원티드 프리온보딩-1주 3일차.md
+++ b/_posts/2022-10-27-원티드 프리온보딩-1주 3일차.md
@@ -1,7 +1,7 @@
 ---
 title: "원티드 프리온보딩 1주차 첫째주 과제 3일차-best case 프로젝트 회고"
 categories: 원티드프리온보딩
-tags: ["과제", "1주차"]
+tags: ["과제","원티드 프리온보딩"]
 ---
 
 # 투두 best case 프로젝트
