--- a/_posts/2022-11-22-포트폴리오 수정.md
+++ b/_posts/2022-11-22-포트폴리오 수정.md
@@ -10,13 +10,22 @@ tags: ["project", "포트폴리오"]
 
 첫 번째 타겟은 바로 "포트폴리오" 프로젝트다. 포트폴리오는 가장 먼저 나를 보여줘야 하는 사이트이며, 이력서를 작성한 내용 중에 좀 더 프로젝트들과 내 경험을 잘 보여줄 수 있게 녹여야한다. 한달 전 만든 포트폴리오를 보면 디자인 적으로는 서로 다른 색이 많아서 어수선해 보이고, 코드적으로 분석해보았을 때, CRA를 이용한 CSR로 만들었기 때문에, "나를 사람들에게 알리기 위한 프로젝트"라는 목표와 달리 SEO를 고려하지 않았었다. 프로젝트 데이터를 받아올 때는 일일이 로컬 JSON에 손으로 직접 내용을 쳐서 입력했기 때문에 정리되지 않은 문장들로 들어와 어려움이 있었다.
 
-이런 점들을 고려해서 이번에 포트폴리오를 만들 때는 SSR을 이용하기 위해 **NEXT JS**를 이용해 SEO를 고려하고, 프로젝트 데이터들을 받아올 때 노션 API를 이용해 해당 프로젝트들에 필요한 내용들을 정리해둔 데이터를 받아와 보여 주는 것으로 진행하려 한다.
+이런 점들을 고려해서 이번에 포트폴리오를 만들 때는 SSR을 이용하기 위해 **NEXT JS**를 이용해 SEO를 고려하고, 프로젝트 데이터들을 받아올 때 **노션 API**를 이용해 해당 프로젝트들에 필요한 내용들을 정리해둔 글을 받아와 보여 주는 것으로 진행하려 한다.
 
 
 
-# 🎨 디자인
+# 🎨 기획수정
 
-우선 저번 포트폴리오의 서로 다른 색이 너무 많아서 집중이 잘되지 않았다. 그래서 이번에는 비슷한 계열의 색 만을 이용하고 full-screen을 기준으로 스크롤로 페이지 이동이 가능하게 하고, 이전과 동일하게 프로젝트 부분은 슬라이더가 가능하게 구성할 예정이다. 포트폴리오의 본질에 맞게 이쁘게 만드는 것도 중요하지만 나에 대한 정보를 제공하는 것을 먼저로 생각해, 클릭 수가 최대한 적을 수 있게 구성해 갈 예정이다. 
+우선 저번 포트폴리오의 서로 다른 색이 너무 많아서 집중이 잘되지 않았다. 그래서 이번에는 비슷한 계열의 색 만을 이용해 집중도를 높이고, full-screen을 기준으로 만들어보려한다. 포트폴리오의 본질에 맞게, 이쁘게 만드는 것도 중요하지만 **나에 대한 정보를 제공하는 것**을 먼저로 생각해, 클릭 수가 최대한 줄이고 사용자가 기다림이 없이 이용할 수 있게 구성을 수정했다.
 
-삭제된 부분:
+ 이전에는 사용한 타이핑 애니메이션이 끝난 후에, 버튼을 클릭을 해야 메인페이지로 이동이 가능하게 했다면, 메인페이지로 바로 들어가서 타이핑 애니메이션이나 나에 대한 소개를 담는 게 더 좋을 것 같다는 생각이 들었다. 그리고 about Me나 skills보다 "projects"에 좀 더 초점을 맞춰서 **어떤 경험을 했고, 어떤 어려움을 해결했는지**에 대해서 정리하면 더 좋지 않을까라고 생각했다. 
 
+[이전 홈페이지]
+
+<img src="/assets/img/2022-11-22-포트폴리오 수정/그림3.png" width="800" />
+
+
+
+## Next/Image
+
+Next에는 이미지 최적화 기능을 제공해주는 자체 컴포넌트인 Next/Image가 존재한다.
