태그,카테고리 수정

--- a/_posts/2022-10-17-채용공고서비스2.md
+++ b/_posts/2022-10-17-채용공고서비스2.md
@@ -1,7 +1,7 @@
 ---
-title: "2022-10-17 채용공고정리서비스-flask이용해 SSR서버만들기"
-categories: 채용공고서비스
-tags: ["project", "채용공고서비스"]
+title: "2022-10-17 모으잡-flask이용해 SSR서버만들기"
+categories: 모으잡
+tags: ["project", "모으잡"]
 ---
 
 ## flask를 이용한 서버 제작
