--- a/_posts/2022-10-23-채용공고서비스7.md
+++ b/_posts/2022-10-23-채용공고서비스7.md
@@ -1,7 +1,7 @@
 ---
-title: "2022-10-23 채용공고정리서비스-puppeteer을 이용한 크롤러제작, 프론트페이지 구상"
-categories: 채용공고서비스
-tags: ["project", "채용공고서비스"]
+title: "2022-10-23 모으잡-puppeteer을 이용한 크롤러제작, 프론트페이지 구상"
+categories: 모으잡
+tags: ["project", "모으잡"]
 ---
 
 
