--- a/_posts/2022-10-24-채용공고서비스8.md
+++ b/_posts/2022-10-24-채용공고서비스8.md
@@ -1,7 +1,7 @@
 ---
-title: "2022-10-24 채용공고정리서비스-프론트페이지 UI제작"
-categories: 채용공고서비스
-tags: ["project", "채용공고서비스"]
+title: "2022-10-24 모으잡-프론트페이지 UI제작"
+categories: 모으잡
+tags: ["project", "모으잡"]
 ---
 
 
@@ -24,17 +24,11 @@ Evernote디자인을 보면 왼쪽의 관련된 내용을 모아두고 자세히
 
 
 
-그리고 UI제작을 위해서 tailwind css라이브러리를 사용해서 제작해보았다. 
-
-styled-components를 좋아하긴 하지만, 새로운 프로젝트를 하면서 새로운 라이브러리들을 경험해보는 것도 
-
-좋을 것 같고, 보다 디지인이 잘되어있는 tailwind를 이용하면 쉽게 내가 원하는 UI를 만들 수 있을 것이라 예상되었다.
+그리고 UI제작을 위해서 tailwind css라이브러리를 사용해서 제작해보았다. styled-components를 좋아하긴 하지만, 새로운 프로젝트를 하면서 새로운 라이브러리들을 경험해보는 것도 좋을 것 같고, 보다 디지인이 잘되어있는 tailwind를 이용하면 쉽게 내가 원하는 UI를 만들 수 있을 것이라 예상되었다.
 
 
 
-우선 제작해본 디자인이다. evernote처럼 왼쪽에 공고들을 간략하게 두고 오른쪽에 자세한 내용을 보여줄 수 있는 공고들을 담았다.
-
-담고보니 조금 부실(?)해보여서 디자인적으로도 계속 고민이 필요하다.
+우선 제작해본 디자인이다. evernote처럼 왼쪽에 공고들을 간략하게 두고 오른쪽에 자세한 내용을 보여줄 수 있는 공고들을 담았다. 담고보니 조금 부실(?)해보여서 디자인적으로도 계속 고민이 필요하다.
 
 
 
@@ -51,18 +45,6 @@ styled-components를 좋아하긴 하지만, 새로운 프로젝트를 하면서
 
 
 
-첫번째 일을 위해서, 서버에서는 회사의 이미지도 받아오면 좋을 것 같아, 이미지를 받아오는 부분을 추가하고,
+첫번째를 위해서, 서버에서는 회사의 이미지도 받아오면 좋을 것 같아, 이미지를 받아오는 부분을 추가하고, 프론트에서는 데이터를 보내고 받는 로직을 추가해야한다. 두번째를 위해서는 localstorage를 우선 이용해 데이터를 저장하고, 필터링을 할 수 있게 UI와 로직을 추가한다.
 
-프론트에서는 데이터를 보내고 받는 로직을 추가해야한다.
-
-
-
-두번째 일을 위해서는 localstorage를 우선 이용해 데이터를 저장하고, 필터링을 할 수 있게 UI와 로직을 추가한다.
-
-
-
-처음에는 뭔가 괜찮은 아이디어다하고 시작했는데 생각보다 초라하다고 느껴져 맘이 힘들기도 했다.
-
-그래도 **계속해서 업데이트하다보면 좀 더 괜찮아지지 않을까, 누군가가 쓸 수도 있지 않을까** 생각하면서 
-
-내일 더 발전시켜나야겠다.
+처음에는 뭔가 괜찮은 아이디어다하고 시작했는데 생각보다 초라하다고 느껴져 맘이 힘들기도 했다. 그래도 **계속해서 업데이트하다보면 좀 더 괜찮아지지 않을까, 누군가가 쓸 수도 있지 않을까** 생각하면서 내일 더 발전시켜나야겠다.
