--- a/_posts/2022-11-23-모으잡 수정.md
+++ b/_posts/2022-11-23-모으잡 수정.md
@@ -1,7 +1,7 @@
 ---
 title: "2022-11-23 모으잡-Next js로 migration, 기획수정"
-categories: 채용공고서비스
-tags: ["project", "채용공고서비스"]
+categories: 모으잡
+tags: ["project", "모으잡"]
 ---
 
 
