--- a/_posts/2022-10-15-채용공고정리서비스계획.md
+++ b/_posts/2022-10-15-채용공고정리서비스계획.md
@@ -1,8 +1,10 @@
 ---
-title: "2022-10-15 채용공고서비스 계획 구체화"
-categories: project
-tags: ["project", "채용공고서비스", "기획"]
+title: "2022-10-15 모으잡-기획 구체화"
+categories: 모으잡
+tags: ["project", "모으잡", "기획"]
 ---
+
+
 
 9월 말에 생각해두었던 채용공고 정리 사이트를 이번 주부터 본격적으로 만들어 보고자 한다. 
 
@@ -14,13 +16,13 @@ tags: ["project", "채용공고서비스", "기획"]
 
 
 
-## 현재까지 기획
+## 😁 현재까지 기획
 
 
 
-### 1. 스크롤러 만들기
+### 1. 크롤러 만들기
 
-우선 채용공고를 스크롤링을 위한 언어를 정하는 게 어려웠다. 파이썬이나 node JS를 사용해야 하는 상황에서 자바스크립트를 엄청 좋아하고, 
+우선 채용공고를 크롤링을 위한 언어를 정하는 게 어려웠다. 파이썬이나 node JS를 사용해야 하는 상황에서 자바스크립트를 엄청 좋아하고, 
 
 node JS를 언젠가는 공부해야 한다는 마음이 있어서 많이 고민을 하다가, 우선 파이썬으로 만들기로 정했다.
 
@@ -28,7 +30,7 @@ node JS를 언젠가는 공부해야 한다는 마음이 있어서 많이 고민
 
 우선 잘 만들어 진 코드를 보면서 배운 후에, Node js로 바꿔서 만들어도 늦지 않겠다는 생각이 들었다.
 
-파이썬으로 크롤러를 최대한 빨리 만들고 간단하게 프론트 페이지랑 연결해보는 것을 목표로 한다.
+파이썬으로 크롤러를 이용해 최대한 빨리 만들고 간단하게 프론트 페이지랑 연결해보는 것을 목표로 한다.
 
 
 
