--- a/_posts/2022-10-16-채용공고서비스1.md
+++ b/_posts/2022-10-16-채용공고서비스1.md
@@ -1,7 +1,7 @@
 ---
-title: "2022-10-16 채용공고정리서비스-파이썬을 이용한 웹크롤러 제작"
-categories: projects
-tags: ["project", "채용공고서비스"]
+title: "2022-10-16 모으잡-파이썬을 이용한 웹크롤러 제작"
+categories: 모으잡
+tags: ["project", "모으잡"]
 ---
 
 
