--- a/_posts/2022-10-19-채용공고서비스4.md
+++ b/_posts/2022-10-19-채용공고서비스4.md
@@ -1,14 +1,14 @@
 ---
-title: "2022-10-19 채용공고정리서비스-express 공부"
-categories: 채용공고서비스
-tags: ["project", "채용공고서비스"]
+title: "2022-10-19 모으잡-express 공부"
+categories: 모으잡
+tags: ["project", "모으잡"]
 ---
 
 
 
 
 
-## Express
+## ✨ Express
 
 express는 노드 JS의 프레임워크로 앞서 만든 Node js의 코드 복잡도를 줄여주고, 쉽게 서버를 만들 수 있게 도와준다.
 
@@ -28,15 +28,7 @@ express의 가장 큰 특징은 **middleware의 체이닝**이라고 할 수 있
 
 request에서 내가 헷갈렸던 부분은 query string과 path variable의 차이이다.  리액트를 하면서 잘 이해하지 못하고 사용했던 것 같아  [Integerous DevLog  블로그](https://ryan-han.com/post/translated/pathvariable_queryparam/)의 글을 참고해 정리해보고자 한다.
 
-
-
-두가지를 구분하기 위해서는 이용목적을 이해해야한다.
-
-
-
-Path variable은 resource를 구분하는 방법이고, query string은 자료에서 정렬이나 필터링을 할때 사용되는 방법이다. 
-
-
+두가지를 구분하기 위해서는 이용목적을 이해해야한다. Path variable은 resource를 구분하는 방법이고, query string은 자료에서 정렬이나 필터링을 할때 사용되는 방법이다. 
 
 예로 /videos라는 url에서는 video 목록을 가져오는 것을 의미하고, /videos?channel=mnet라고 한다면 video목록에서 channel이 mnet인 것을 받아온다고
 
