--- a/_posts/2022-10-20-채용공고서비스5.md
+++ b/_posts/2022-10-20-채용공고서비스5.md
@@ -1,7 +1,7 @@
 ---
-title: "2022-10-20 채용공고정리서비스-express cors 에러, 에러핸들링"
-categories: 채용공고서비스
-tags: ["project", "채용공고서비스"]
+title: "2022-10-20 모으잡-express cors 에러, 에러핸들링"
+categories: 모으잡
+tags: ["project", "모으잡"]
 ---
 
 
