--- a/_posts/2022-10-22-채용공고서비스6.md
+++ b/_posts/2022-10-22-채용공고서비스6.md
@@ -1,7 +1,7 @@
 ---
-title: "2022-10-22 채용공고정리서비스-express 서버 제작 시작, cheerio 모듈"
-categories: 채용공고서비스
-tags: ["project", "채용공고서비스"]
+title: "2022-10-22 모으잡-express 서버 제작 시작, cheerio 모듈"
+categories: 모으잡
+tags: ["project", "모으잡"]
 ---
 
 
@@ -15,8 +15,6 @@ tags: ["project", "채용공고서비스"]
 
 
 ### SCHEMA
-
-
 
 #### Job data
 
@@ -248,7 +246,7 @@ cheerio는 크롤링을 위한 Node Js 라이브러리로, 파이썬의 beautifu
 
 
 
- ![image-20221023154438608](../assets/img/2022-10-22-채용공고서비스6/image-20221023154438608.png)
+ ![image-20221023154438608](/assets/img/2022-10-22-채용공고서비스6/image-20221023154438608.png)
 
 ```javascript
 import cheerio from 'cheerio';
@@ -286,4 +284,4 @@ const parsing = async () => {
 
 
 
-![image-20221023154543185](../assets/img/2022-10-22-채용공고서비스6/image-20221023154543185.png)
+![image-20221023154543185](/assets/img/2022-10-22-채용공고서비스6/image-20221023154543185.png)
