태그 카테고리 수정

--- a/_posts/2022-10-01-포트폴리오 제작 1편.md
+++ b/_posts/2022-10-01-포트폴리오 제작 1편.md
@@ -1,6 +1,6 @@
 ---
-title: "2022-10-1 포트폴리오 제작 1편"
-categories: project
+title: "포트폴리오 제작-메인 페이지 제작"
+categories: 포트폴리오
 tags: ["project", "포트폴리오"]
 ---
 
