--- a/_posts/2022-10-20-채용공고서비스5.md
+++ b/_posts/2022-10-20-채용공고서비스5.md
@@ -1,5 +1,5 @@
 ---
-title: "2022-10-20 모으잡-express cors 에러, 에러핸들링"
+title: "모으잡-express cors 에러, 에러핸들링"
 categories: 모으잡
 tags: ["project", "모으잡"]
 ---
