--- a/_posts/2022-10-22-채용공고서비스6.md
+++ b/_posts/2022-10-22-채용공고서비스6.md
@@ -1,5 +1,5 @@
 ---
-title: "2022-10-22 모으잡-express 서버 제작 시작, cheerio 모듈"
+title: "모으잡-express 서버 제작 시작, cheerio 모듈"
 categories: 모으잡
 tags: ["project", "모으잡"]
 ---
