--- a/_posts/2022-11-23-모으잡 수정.md
+++ b/_posts/2022-11-23-모으잡 수정.md
@@ -1,5 +1,5 @@
 ---
-title: "2022-11-23 모으잡-Next js로 migration, 기획수정"
+title: "모으잡-Next js로 migration, 디자인 수정"
 categories: 모으잡
 tags: ["project", "모으잡"]
 ---
