--- a/_posts/2022-10-02-포트폴리오 제작 2편.md
+++ b/_posts/2022-10-02-포트폴리오 제작 2편.md
@@ -1,6 +1,6 @@
 ---
-title: "2022-10-02 포트폴리오 제작 2편"
-categories: project
+title: "포트폴리오 제작-슬라이더, 페이지전환 애니메이션"
+categories: 포트폴리오
 tags: ["project", "포트폴리오"]
 ---
 
