--- a/_posts/2022-10-03-포트폴리오 제작 3편.md
+++ b/_posts/2022-10-03-포트폴리오 제작 3편.md
@@ -1,6 +1,6 @@
 ---
-title: "2022-10-03 포트폴리오 제작 3편"
-categories: project
+title: "포트폴리오 제작-반응형, 배포까지"
+categories: 포트폴리오
 tags: ["project", "포트폴리오"]
 ---
 
