--- a/_posts/2022-10-25-채용공고서비스9.md
+++ b/_posts/2022-10-25-채용공고서비스9.md
@@ -1,5 +1,5 @@
 ---
-title: "2022-10-25 모으잡-프론트페이지 UI수정, 크롤링한 데이터 받아오기"
+title: "모으잡-프론트페이지 UI수정, 크롤링한 데이터 받아오기"
 categories: 모으잡
 tags: ["project", "모으잡"]
 ---
