--- a/_posts/2022-02-07-2022-02-07-TIL.md
+++ b/_posts/2022-02-07-2022-02-07-TIL.md
@@ -2,6 +2,8 @@
 
 ![javascript](https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Unofficial_JavaScript_logo_2.svg/210px-Unofficial_JavaScript_logo_2.svg.png)
 
+
+
 class는 원래 javascript에 있었던 것이 아니라 추가된 **synthetic sugar** 라고 표현된다. React를 공부하면서 Component가 사용자에게 보여지는 UI만을 담당할 수 있게 다른 서버통신이나 api를 받아오는 로직들을 따로 빼서 전달해주는 `dependency injection`을 많이 썼었는데 이때 담당하는 로직을 항상 Class를 통해 전달해주었다. class를 사용하지만 잘 알지 못했기에 공부해 보았다.
 
 ## basic
@@ -20,14 +22,7 @@ let user = new User("john");
 user.sayHi(); // "john"
 ```
 
-class를 사용하게 되면 기본적으로 function이 만들어지게 된다.
-<br>
-User이 new function으로 만들어지게 되고 new를 사용했기에 빈 객체가 만들어져 context로 할당된다.
-<br>
-전달된 user라는 함수의 constructor는 name property에 인수 "john"을 할당하고 method sayHi()를 했을때 호출되는 것을 볼 수 있다.
-
- <br>
- <br>
+class를 사용하게 되면 기본적으로 function이 만들어지게 된다. User가 new function으로 만들어지게 되고 new를 사용했기에 빈 객체가 만들어져 context로 할당된다. 전달된 user라는 함수의 constructor는 name property에 인수 "john"을 할당하고 method sayHi()를 했을때 호출되는 것을 볼 수 있다.
 
 이렇게 보면 굳이 class를 써야하나 싶기도 했지만 class만을 가지는 특징이 있다고 한다.
 
@@ -36,7 +31,7 @@ User이 new function으로 만들어지게 되고 new를 사용했기에 빈 객
 3.  class method가 non-enumerable하기 때문에 for~in을 통해 불려지지 않는다.
 4.  항상 use strict가 적용된다.
 
-이러한 4가지 특징에서 2,3,4의 경우 에러를 막아주는 데 많이 도움이 될 것이라 예쌍 할 수 있었다.
+이러한 4가지 특징에서 2,3,4의 경우 에러를 막아주는 데 많이 도움이 될 것이라 예상 할 수 있었다.
 
 ## 마치며
 
