--- a/_posts/2022-02-09-2022-02-09-TIL.md
+++ b/_posts/2022-02-09-2022-02-09-TIL.md
@@ -37,9 +37,7 @@ console.log(user.name); //john
 user.name = "james"; //name이 james로 수정
 ```
 
-\_(under bar) 는 class 내부값으로만 사용한다는 의미로 class의 name property를 접근할 때는 getter와 setter로만 접근하게 된다. 만약 getter의 `this._name`을 `this.name`으로 return 하게 되면 다음과 같은 에러를 보여주게 된다.
-
-![reactCompoenent](../../../assets/img/blog/getterError.png)
+\_(under bar) 는 class 내부값으로만 사용한다는 의미로 class의 name property를 접근할 때는 getter와 setter로만 접근하게 된다. 만약 getter의 `this._name`을 `this.name`으로 return 하게 되면 에러를 보여주게 된다.
 
 call stack은 브라우저가 요청받은 것을 저장해놓는 곳인데 this.name으로 계속해서 재귀적으로 getter를 부르게 되기떄문에 이와 같은 에러를 보여주게된다. 이를 해결하기위해 this.\_name으로 설정한다. this.\_name으로 접근은 가능하지만 class의 내부값이기 때문에 되도록이면 사용하지 않는게 좋다.
 
