모으잡 전반적인 글 수정

--- a/_posts/2022-10-15-채용공고정리서비스계획.md
+++ b/_posts/2022-10-15-채용공고정리서비스계획.md
@@ -6,13 +6,7 @@ tags: ["project", "모으잡", "기획"]
 
 
 
-9월 말에 생각해두었던 채용공고 정리 사이트를 이번 주부터 본격적으로 만들어 보고자 한다. 
-
-급하게 한 주 안에 최대한 만드는 것을 목표로 잡았는데, 이유는 다음 주에 프리온보딩 코스 평가 결과가 나오기 때문에, 
-
-만약 합격한다면, 내 프로젝트 자체를 새롭게 기획하고 만들기 보다는, 과제를 하고, 새롭게 알게 된 걸로 프로젝트들을 
-
-수정하는 방향으로 시간을 써야 맞지 않을까 생각되었다. 그래서 먼저 기획 내용을 다시 점검하고 참고하고 공부할 내용들을 정리했다.
+9월 말에 생각해두었던 채용공고 정리 사이트를 이번 주부터 본격적으로 만들어 보고자 한다. 급하게 한 주 안에 최대한 만드는 것을 목표로 잡았는데, 이유는 다음 주에 프리온보딩 코스 평가 결과가 나오기 때문에, 만약 합격한다면, 내 프로젝트 자체를 새롭게 기획하고 만들기 보다는, 과제를 하고, 새롭게 알게 된 걸로 프로젝트들을 수정하는 방향으로 시간을 써야 맞지 않을까 생각되었다. 그래서 먼저 기획 내용을 다시 점검하고 참고하고 공부할 내용들을 정리했다.
 
 
 
@@ -22,17 +16,9 @@ tags: ["project", "모으잡", "기획"]
 
 ### 1. 크롤러 만들기
 
-우선 채용공고를 크롤링을 위한 언어를 정하는 게 어려웠다. 파이썬이나 node JS를 사용해야 하는 상황에서 자바스크립트를 엄청 좋아하고, 
+우선 채용공고를 크롤링을 위한 언어를 정하는 게 어려웠다. 파이썬이나 node JS를 사용해야 하는 상황에서 자바스크립트를 엄청 좋아하고, node JS를 언젠가는 공부해야 한다는 마음이 있어서 많이 고민을 하다가, 우선 파이썬으로 만들기로 정했다. 
 
-node JS를 언젠가는 공부해야 한다는 마음이 있어서 많이 고민을 하다가, 우선 파이썬으로 만들기로 정했다.
-
-파이썬은 이미 여러가지 크롤러를 만드는 영상들이 많아, 보고 배울 수 있는 코드가 많기 때문에  
-
-우선 잘 만들어 진 코드를 보면서 배운 후에, Node js로 바꿔서 만들어도 늦지 않겠다는 생각이 들었다.
-
-파이썬으로 크롤러를 이용해 최대한 빨리 만들고 간단하게 프론트 페이지랑 연결해보는 것을 목표로 한다.
-
-
+파이썬은 이미 여러가지 크롤러를 만드는 영상들이 많아, 보고 배울 수 있는 코드가 많기 때문에 우선 잘 만들어 진 코드를 보면서 배운 후에, Node js로 바꿔서 만들어도 늦지 않겠다는 생각이 들었다. 파이썬으로 크롤러를 이용해 최대한 빨리 만들고 간단하게 프론트 페이지랑 연결해보는 것을 목표로 한다.
 
 크롤러로 정리할 내용은  회사/ 주요업무/ 자격요건/ 우대사항 4가지로 정리해보고자 한다.
 
