--- a/_posts/2022-10-22-채용공고서비스6.md
+++ b/_posts/2022-10-22-채용공고서비스6.md
@@ -4,17 +4,11 @@ categories: 모으잡
 tags: ["project", "모으잡"]
 ---
 
+# 서버 제작
 
+공부를 바탕으로 서버를 만들기 전에 우선 서버의 어떤 기능이 필요할 지 먼저 정리한 후에, 직접 서버를 만들었다.
 
-## 서버 제작
-
-공부를 바탕으로 서버를 만들기 전에 우선 서버의 어떤 기능이 필요할 지 먼저 정리한 후에,
-
-직접 서버를 만들었다.
-
-
-
-### SCHEMA
+## SCHEMA
 
 #### Job data
 
@@ -101,13 +95,7 @@ response 204
 
 
 
-### 서버 제작
-
-위의 코드를 바탕으로 서버를 만들고, postman을 이용해서 api가 정상적으로 작동하는지 확인했다.
-
-앞서 공부했던 유용한 미들웨어 (helmet, cors)등을 적용해보았고,  아직 데이터베이스가 없기 때문에
-
-우선 서버의 변수로 저장해서 관리했고, 데이터는 op.gg의 공고문을 참고해서 만들었다.
+위의 스키마를 바탕으로 서버를 만들고, postman을 이용해서 api가 정상적으로 작동하는지 확인했다. 앞서 공부했던 유용한 미들웨어 (helmet, cors)등을 적용해보았고,  아직 데이터베이스가 없기 때문에, 우선 서버의 로컬변수로 저장해서 관리했다. 데이터는 op.gg의 공고문을 참고해서 만들었다.
 
 
 
@@ -214,21 +202,15 @@ app.listen(4000);
 
 postman으로 정상적으로 다 작동하는 것을 확인할 수 있었다. 이제 중요한 건 실제로 크롤링을 한 데이터를 만드는 과정이다.
 
-
-
-![image-20221023033122214](../assets/img/2022-10-22-채용공고서비스 제작기-6편/image-20221023033122214.png)
+![image-20221023033122214](/assets/img/2022-10-22-채용공고서비스 제작기-6편/image-20221023033122214.png)
 
 
 
-## Cheerio를 이용한 크롤링
+# Cheerio를 이용한 크롤링
 
 cheerio는 크롤링을 위한 Node Js 라이브러리로, 파이썬의 beautifulSoup과 같은 역할을 한다.
 
-먼저 원티드 페이지를 보면 내가 원하는 정보는 h6태그에 카테고리 제목이, p안의 span의 내용들이 바로 담겨 있다.
-
-페이지 내부의 다른 곳에서 h6태그와 p태그가 사용되고 있지 않기 때문에 간단하게 할 수 있을 것이라 생각했지만
-
-이상하게 아무것도 크롤링이 되지 않았다.
+먼저 원티드 페이지를 보면 내가 원하는 정보는 h6태그에 카테고리 제목이, p안의 span의 내용들이 바로 담겨 있다. 페이지 내부의 다른 곳에서 h6태그와 p태그가 사용되고 있지 않기 때문에 간단하게 할 수 있을 것이라 생각했지만 이상하게 아무것도 크롤링이 되지 않았다.
 
 
 
@@ -276,11 +258,7 @@ const parsing = async () => {
 
 
 
-왜 안되는지 체크하기 위해서 네트워크 창을 보니 받아온 html을 보았을 때 
-
-**정적으로 만들어진 페이지만 cheerio가 받아와서 찾다보니 생긴 일이 아닐까** 라는 생각이 들었다. 
-
-만약 내 생각이 맞다면, 동적으로 페이지를 받아오기 위해서는 이전에 사용했던 chromium과 같은 라이브러리가 필요할 것 같다.
+왜 안되는지 체크하기 위해서 네트워크 창을 보니 받아온 html을 보았을 때 **정적으로 만들어진 페이지만 cheerio가 받아와서 찾다보니 생긴 일이 아닐까** 라는 생각이 들었다. 만약 내 생각이 맞다면, 동적으로 페이지를 받아오기 위해서는 이전에 사용했던 chromium과 같은 라이브러리가 필요할 것 같다.
 
 
 
