--- a/_posts/2022-10-24-채용공고서비스8.md
+++ b/_posts/2022-10-24-채용공고서비스8.md
@@ -16,23 +16,15 @@ tags: ["project", "모으잡"]
 
 [Evernote]
 
-![Evernote 무료 다운로드 | Evernote](https://evernote.com/c/assets/download/evernote_platforms.png?775a7856b9196431)
+<img src="https://evernote.com/c/assets/download/evernote_platforms.png?775a7856b9196431" width="600px">
 
-Evernote디자인을 보면 왼쪽의 관련된 내용을 모아두고 자세히 보고 싶은 부분은 오른쪽에 보여주는 형식으로 되어있다.
-
-내 서비스에서 왼쪽에 스크롤링한 공고들을 간략하게 보여주고, 오른쪽에는 자세히 보고싶은 공고를 보여주는 방식으로 사용해보았다.
-
-
-
-그리고 UI제작을 위해서 tailwind css라이브러리를 사용해서 제작해보았다. styled-components를 좋아하긴 하지만, 새로운 프로젝트를 하면서 새로운 라이브러리들을 경험해보는 것도 좋을 것 같고, 보다 디지인이 잘되어있는 tailwind를 이용하면 쉽게 내가 원하는 UI를 만들 수 있을 것이라 예상되었다.
-
-
+Evernote디자인을 보면 왼쪽의 관련된 내용을 모아두고 자세히 보고 싶은 부분은 오른쪽에 보여주는 형식으로 되어있다. 내 서비스에서도 왼쪽에 스크롤링한 공고들을 간략하게 보여주고, 오른쪽에는 자세히 보고싶은 공고를 보여주는 방식으로 디자인해보았다. UI제작을 위해서 tailwind css라이브러리를 사용해서 제작해보았다. styled-components를 좋아하긴 하지만, 새로운 프로젝트를 하면서 새로운 라이브러리들을 경험해보는 것도 좋을 것 같고, 보다 디자인이 잘되어있는 tailwind를 이용하면 쉽게 내가 원하는 UI를 만들 수 있을 것이라 예상되었다.
 
 우선 제작해본 디자인이다. evernote처럼 왼쪽에 공고들을 간략하게 두고 오른쪽에 자세한 내용을 보여줄 수 있는 공고들을 담았다. 담고보니 조금 부실(?)해보여서 디자인적으로도 계속 고민이 필요하다.
 
 
 
-![image-20221025030622589](../assets/img/2022-10-24-채용공고서비스8/image-20221025030622589.png)
+![image-20221025030622589](/assets/img/2022-10-24-채용공고서비스8/image-20221025030622589.png)
 
 
 
@@ -42,8 +34,6 @@ Evernote디자인을 보면 왼쪽의 관련된 내용을 모아두고 자세히
 
 1. 공고의 url을 받아서 전달하면 서버에 url을 전달하고, 데이터를 추출받는다.
 2. 추출한 공고를 데이터베이스를 저장한 후에, 사용자가 원하는 기준에 따라 필터링된 데이터들을 보여준다.
-
-
 
 첫번째를 위해서, 서버에서는 회사의 이미지도 받아오면 좋을 것 같아, 이미지를 받아오는 부분을 추가하고, 프론트에서는 데이터를 보내고 받는 로직을 추가해야한다. 두번째를 위해서는 localstorage를 우선 이용해 데이터를 저장하고, 필터링을 할 수 있게 UI와 로직을 추가한다.
 
