--- a/_posts/2022-10-17-채용공고서비스2.md
+++ b/_posts/2022-10-17-채용공고서비스2.md
@@ -4,15 +4,9 @@ categories: 모으잡
 tags: ["project", "모으잡"]
 ---
 
-## flask를 이용한 서버 제작
+# Flask를 이용한 서버 제작
 
-flask는 파이썬의 프레임워크로 아주 간단한 방법으로 서버를 구축할 수 있다. flask를 사용하는 방법은 엄청나게 쉬웠는데 route를 연결하고
-
-route에 해당하는 페이지를 간단하게 함수를 이용해서 render_template로 return해주면 해당 페이지를 만들 수 있었다.
-
-render_template를 이용할 때 주의할 점은 templates라는 폴더 내에 있는 파일을 전달해주기 때문에 반드시 templates안에 파일을 만들고,
-
-해당하는 파일의 이름을 전달해주면 된다.
+flask는 파이썬의 프레임워크로 아주 간단한 방법으로 서버를 구축할 수 있다. flask를 사용하는 방법은 엄청나게 쉬웠는데 route를 연결하고, route에 해당하는 페이지를 간단하게 함수를 이용해서 render_template로 return해주면 해당 페이지를 만들 수 있었다. render_template를 이용할 때 주의할 점은 templates라는 폴더 내에 있는 파일을 전달해주기 때문에 반드시 templates안에 파일을 만들고, 해당하는 파일의 이름을 전달해주면 된다.
 
 ```python
 from flask import Flask, render_template
@@ -29,7 +23,9 @@ app.run("0.0.0.0") #app을 실행할때 replit은 0.0.0.0을 사용해
 
 제작한 스크롤러에 접속할 때 필요한 페이지는 총 세가지로 검색을 하는 "/", 검색한 내용을 보여주는 "/search", 모아온 데이터를 다운받을 수 있는 "/extract"이다.
 
-### home 페이지
+
+
+## home 페이지
 
 홈페이지에서는 검색한 내용을 전달 받아야한다. 전달 받기 위해서 home.html에 form과 input을 이용했다.
 
@@ -50,7 +46,9 @@ html을 잘 알고 있었다고 생각했지만 form은 항상 event.preventDefa
 </body>
 ```
 
-### Search 페이지
+
+
+## Search 페이지
 
 home 페이지를 통해 전달한 내용은 "/search/keyword="에 전달되기 때문에 search페이지의 함수에서 keyword를 받아온다.
 
@@ -106,7 +104,9 @@ def search():
 </main>
 ```
 
-### export페이지
+
+
+## export페이지
 
 export페이지는 앞서 크롤링한 데이터를 다운로드할 수 있는 페이지다. 똑같이 전달받은 keyword를 이용해서 해당 keyword를 이름으로하는 .csv파일을
 
@@ -129,12 +129,14 @@ def export():
 
 ```
 
-이렇게 만든 페이지들은 내가 생각했던 프론트와 서버가 구분되는 게 아니라 서버에서 직접 화면을 만들어 보여주는 "서버사이드 렌더링"이라는 것을 공부하고 난 뒤에 깨달았다.
 
-내가 원하는 것은 (1) API 서버를 만들고 (2) 프론트에서 서버에 해당 내용으로 요청을 보낸다 (3) 서버는 크롤링을 해서 결과를 json으로 프론트 서버에 응답한다
 
-(4) 프론트서버는 받은 내용을 이용해 랜더링한다 이러한 과정을 생각했었다.
+이렇게 만든 페이지들은 내가 생각했던 프론트와 서버가 구분되는 게 아니라 서버에서 직접 화면을 만들어 보여주는 "서버사이드 렌더링"이라는 것을 공부하고 난 뒤에 깨달았다. 내가 원하는 것은 다음과 같은 과정이었다.
 
-파이썬으로는 코딩테스트 공부만했다보니까 실제로 사용하기 위한 환경세팅 자체가 어색했고, flask와 react를 같이 쓰는 자료가 잘나오지 않아서,
+1. API 서버를 만든다
 
-이참에 node js를 공부해서 자바스크립트로 프론트와 백엔드를 다 연결해보자라는 생각이 들어, 조금 돌아가지만 node js를 공부해서 내일 부터 다시 node js를 공부해보기로 계획을 잡았다.
+2. 프론트에서 서버에 해당 내용으로 요청을 보낸다 
+3. 서버는 크롤링을 해서 결과를 json으로 프론트 서버에 응답한다 
+4.  프론트서버는 받은 내용을 이용해 랜더링한다 
+
+파이썬으로는 코딩테스트 공부만했다보니까 실제로 사용하기 위한 환경세팅 자체가 어색했고, flask와 react를 같이 쓰는 자료가 잘나오지 않아서, 이참에 node js를 공부해서 자바스크립트로 프론트와 백엔드를 다 연결해보자라는 생각이 들어, 조금 돌아가지만 크롤링에 대해 이해했으므로, node js를 공부해서 내일 부터 다시 node js를 공부해보기로 계획을 잡았다.
