2022-12-02 제너레이터/async

--- a/_posts/2022-11-27-비동기와 프로미스 .md
+++ b/_posts/2022-11-27-비동기와 프로미스 .md
@@ -210,6 +210,8 @@ getData("실패")
 
 ```
 
+
+
 그러면 이번엔 앞서 보았던 callback hell 예제를 promise로 해결해보자
 
 ```javascript
@@ -252,7 +254,7 @@ userStorage.loginUser(id, password)
 .catch(console.log);
 ```
 
-클래스 내부는 크게 달라진 것은 없지만 사용할 때 복잡도가 크게 줄어 가독성이 향상된 것을 알 수 있다. 이렇게 프로미스를 통해 callback함수의 한계인 후속처리와 에러처리를 해결할 수 있다는 것을 알 수 있었다.
+클래스 내부는 크게 달라진 것은 없지만, 사용할 때 복잡도가 크게 줄어 가독성이 향상된 것을 알 수 있다. 이렇게 프로미스를 통해 callback함수의 한계인 후속처리와 에러처리를 해결할 수 있다는 것을 알 수 있었다.
 
 
 
@@ -394,7 +396,7 @@ handleClick();
 
 
 
-<img src="../assets/img/2022-11-27-비동기와 프로미스 /ezgif.com-gif-maker.gif" width=800>
+<img src="/assets/img/2022-11-27-비동기와 프로미스 /ezgif.com-gif-maker.gif" width=800>
 
 
 
