rest api update

--- a/_posts/2022-11-27-비동기와 프로미스 .md
+++ b/_posts/2022-11-27-비동기와 프로미스 .md
@@ -410,8 +410,14 @@ handleClick();
 
 [참조]
 
-[Understanding Event Loop, Call Stack, Event &amp; Job Queue in Javascript]: https://medium.com/@Rahulx1/understanding-event-loop-call-stack-event-job-queue-in-javascript-63dcd2c71ecd
+1. Understanding Event Loop, Call Stack, Event &amp; Job Queue in Javascript: 
 
-[모던 자바스크립트 딥다이브 ]: http://www.yes24.com/Product/Goods/92742567
-[Callback Hell (콜백 지옥)]:https://velog.io/@seul06/JavaScript-%EC%BD%9C%EB%B0%B1-%EC%A7%80%EC%98%A5
-[자바스크립트 Promise 쉽게 이해하기]:https://joshua1988.github.io/web-development/javascript/promise-for-beginners/#promise%EA%B0%80-%EB%AD%94%EA%B0%80%EC%9A%94
+​	   https://medium.com/@Rahulx1/understanding-event-loop-call-stack-event-job-queue-in-javascript-63dcd2c71ecd
+
+2. 모던 자바스크립트 딥다이브: http://www.yes24.com/Product/Goods/92742567
+
+3. Callback Hell (콜백 지옥): https://velog.io/@seul06/JavaScript-%EC%BD%9C%EB%B0%B1-%EC%A7%80%EC%98%A5
+
+4. 자바스크립트 Promise 쉽게 이해하기:
+
+   https://joshua1988.github.io/web-development/javascript/promise-for-beginners/#promise%EA%B0%80-%EB%AD%94%EA%B0%80%EC%9A%94
