--- a/_posts/2022-10-06-HTTP 정리.md
+++ b/_posts/2022-10-06-HTTP 정리.md
@@ -160,11 +160,48 @@ url을 이용해서 요청을 보낼때 어떤 action을 해달라고 할지를 
 
   get은 **url의 자료를 받아오기 원할 때** 사용하며, 성공시 200 OK status code를, 실패시에는 401 Unauthorized, 403 Forbidden, 404 Not found와 같은 에러를 받을 수 있다. 
 
+사용 예
 
+```javascript
+async getTodos(username) {
+    const query = username ? `?username=${username}` : '';
+    const response = await fetch(`${this.baseUrl}/todos${query}`, {
+      method: 'GET',
+    });
+    const data = await response.json();
+    if (response.status !== 200) {
+      throw new Error(data.message);
+    }
+    return data;
+  }
+```
 
 ### 2. POST
 
   post는 url 위치에 함께 보내는 body나 form data를 함께 전달해 **데이터를 생성할 때 사용**하며, 성공시 201 Created를 실패시에  401 Unauthorized, 403 Forbidden, 404 Not found, 409 Confilct와 같은 에러를 받을 수 있다.
+
+사용 예)
+
+```javascript
+ async postTodo(text) {
+    const todo = {
+      name: 'Choi',
+      username: 'choi',
+      text,
+    };
+    const response = await fetch(`${this.baseUrl}/todos`, {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json', // fetch 사용시 꼭 담아주기
+      },
+      body: JSON.stringify(tweet), // body에 담을때는 꼭 JSON으로 직렬화하기
+    });
+    const data = await response.json();
+    return data;
+  }
+```
+
+
 
 
 
@@ -172,11 +209,48 @@ url을 이용해서 요청을 보낼때 어떤 action을 해달라고 할지를 
 
  put은 url 위치의 **데이터를 수정할 때 사용**하며, 성공시 200 OK을, 실패시  403 Forbidden, 404 Not found, 405 Method not allowed와 같은 에러를 받을 수 있다.
 
+사용 예)
+
+```javascript
+ async updateTodo(todoId, text) {
+    const response = await fetch(`${this.baseUrl}/todo/${tweetId}`, {
+      method: 'PUT',
+      headers: {
+        'Content-Type': 'application/json',
+      },
+      body: JSON.stringify({ text }),
+    });
+    const data = await response.json();
+    if (response.status !== 200) {
+      throw new Error(data.message);
+    }
+    return data;
+  }
+```
+
 
 
 ### 4. DELETE
 
 delete는 url위치의 **데이터를 삭제할 때 사용**하며, 성공시 204 No content를, 실패시 403 Forbidden, 404 Not found, 405 Method not allowed와 같은 에러를 받을 수 있다.
+
+
+
+사용 예)
+
+```javascript
+async deleteTodo(tweetId) {
+    const response = fetch(`${this.baseUrl}/todos/${tweetId}`, {
+      method: 'DELETE',
+      headers: {
+        'Content-Type': 'application/json',
+      },
+    });
+    if (response.status !== 204) {
+      throw new Error();
+    }
+  }
+```
 
 
 
