블로그 글 단락 수정

--- a/_posts/2022-10-18-채용공고서비스3.md
+++ b/_posts/2022-10-18-채용공고서비스3.md
@@ -8,23 +8,15 @@ tags: ["project", "모으잡"]
 
 # 🎈 Node JS란
 
-노드 JS는 브라우저밖에서도 자바스크립트를 사용할 수 있는 자바스크립트 런타임 환경이다. single thread 언어인 Javascript가 
+노드 JS는 브라우저밖에서도 자바스크립트를 사용할 수 있는 자바스크립트 런타임 환경이다. single thread 언어인 Javascript가 브라우저 위에서 browser API를 이용한 비동기 처리로 다양한 일을 처리할 수 있었던 것 처럼, Node JS 또한, 자체 API를 이용해서 비동기 처리를 이용해 다양한 기능을 구현할 수 있고, brower처럼 Event를 통해서 콜백을 실행하는 특징을 가진다.
 
-브라우저 위에서 browser API를 이용한 비동기 처리로 다양한 일을 처리할 수 있었던 것 처럼, Node JS 또한, 자체 API를 이용해서 
-
-비동기 처리를 이용해 다양한 기능을 구현할 수 있고, brower처럼 Event를 통해서 콜백을 실행하는 특징을 가진다.
-
-이러한 기능중에서 나에게 현재 필요한 노드 JS의 기능은 API 서버를 만드는 것으로, 서버를 만들기 위한 기초 API들을 먼저 정리하고
-
-서버를 만드는 과정을 정리해보려 한다.
+이러한 기능중에서 나에게 현재 필요한 노드 JS의 기능은 API 서버를 만드는 것으로, 서버를 만들기 위한 기초 API들을 먼저 정리하고 서버를 만드는 과정을 정리해보려 한다.
 
 
 
 ## Module system
 
-노드의 모듈시스템은 자체적인 **require(module)**이라는 함수를 통해서 받아올 수 있다. 
-
-현재는 자바스크립트 자체의 **import/export**도 이용가능한데, npm의 package.json에 "type":"module"로 추가해주어야한다.
+노드의 모듈시스템은 자체적인 **require(module)**이라는 함수를 통해서 받아올 수 있다.  현재는 자바스크립트 자체의 **import/export**도 이용가능한데, npm의 package.json에 "type":"module"로 추가해주어야한다.
 
 
 
@@ -115,12 +107,10 @@ readSream.pipe(writeStream) //ex1.txt을 읽고 ex2.txt에 쓰는 파이프
 
 ### 서버사이드 렌더링
 
-Node 서버는 flask를 사용했을 때와 동일하게, request로 받은 요청에 따라 response로 해당하는 html을 보여주는 서버를 먼저 제작했다.
-
-과정은 다음과 같이 정리할 수 있다.
+Node 서버는 flask를 사용했을 때와 동일하게, request로 받은 요청에 따라 response로 해당하는 html을 보여주는 서버를 먼저 제작했다. 과정은 다음과 같이 정리할 수 있다.
 
 1. http모듈을 이용해서 서버를 만든다.
-2. 서버에 받은 request의 url에 따라 다른 html을 보낸다.
+2. 서버에 받은 request의 url에 따라 html을 보낸다.
 
 
 
@@ -156,17 +146,7 @@ server.listen(8080);
 
 ### JSON을 이용한 서버
 
-JSON은 Javascript Object Notation의 약자로 네트워크통신을 위한 구조화된 데이터를 의미한다.  
-
-앞서 정리했었던 HTTP 통신으로 받은 request에 따라 해당하는 응답을 보내줄때, 요청에서 요구하는 데이터를 body에 담아서 보내줄 때,  JSON으로 전달할 수 있다.
-
-
-
-간단하게 배열을 GET이나 POST를 이용해서 JSON으로 보내주는 서버를 만들었다.
-
-위의 서버와 다르게 request의 method별로 다른 응답을 보내주어야하고, 적절한 status_code를 함께 
-
-담아주어야한다.
+JSON은 Javascript Object Notation의 약자로 네트워크통신을 위한 구조화된 데이터를 의미한다. 앞서 정리했었던 HTTP 통신으로 받은 request에 따라 해당하는 응답을 보내줄때, 요청에서 요구하는 데이터를 body에 담아서 보내줄 때,  JSON으로 전달할 수 있다. 간단하게 배열을 GET이나 POST를 이용해서 JSON으로 보내주는 서버를 만들었다. 위의 서버와 다르게 request의 method별로 다른 응답을 보내주어야하고, 적절한 status_code를 함께 담아주어야한다.
 
 (GET이 성공하면 200, POST가 성공하면 201)
 
