--- a/_posts/2022-11-04-원티드 프리온보딩-2-1 과제 회고.md
+++ b/_posts/2022-11-04-원티드 프리온보딩-2-1 과제 회고.md
@@ -16,19 +16,17 @@ tags: ["과제","원티드 프리온보딩"]
 
 ## UseReducer와 Context API
 
-처음 과제부터 계속해서 사용해와서 조금은 익숙해진 context API와 useReducer를 이번에 함께 사용해보았다. 다른 팀의 저번과제의 코드들과 [velopert님의 글](https://react.vlpt.us/)
-
-을 참고해서 코드를 구성했다.
+처음 과제부터 계속해서 사용해와서 조금은 익숙해진 context API와 useReducer를 이번에 함께 사용해보았다. 다른 팀의 저번과제의 코드들과 [velopert님의 글](https://react.vlpt.us/)을 참고해서 코드를 구성했다.
 
 
 
 ### UseReducer
 
-<img width="800" src="https://dmitripavlutin.com/static/c47eb25d68bef042100d2b32083d7c0a/59014/cover.png">
+<img width="800px" src="https://dmitripavlutin.com/static/c47eb25d68bef042100d2b32083d7c0a/59014/cover.png">
 
 
 
-useReducer는 중첩된 상태나 여러가지 상태를 하나의 오브젝트로 묶어서 관리할 때 등, 복잡한 상태관리 로직을 간단하게 처리할 수 있는 react hook이다. useReducer의 로직은 useState와 유사하게, 우리가 관리해야할 **상태**가 있고, 상태를 어떻게 처리할지를 담고 있는 **action**과 전달받은 action에 따라 처리해주는 **dispatch**가 있다.
+useReducer는 중첩된 상태나 여러가지 상태를 하나의 오브젝트로 묶어서 관리할 때 등, 복잡한 상태관리 로직을 간단하게 처리할 수 있는 react hook이다. useReducer의 로직은 useState와 유사하게, 우리가 관리해야 할 **상태**가 있고, 상태를 어떻게 처리할지를 담고 있는 **action**과 전달받은 action에 따라 처리해주는 **dispatch**가 있다.
 
 
 
@@ -43,7 +41,8 @@ const reducer = (state: State, action: Action): State => {
     ...
 };
 
-const [state, dispatch] = useReducer(reducer, initialState);// const [state,setState]=useState()와 유사해
+const [state, dispatch] = useReducer(reducer, initialState);
+// const [state,setState]=useState()와 유사해
 ```
 
 
@@ -215,7 +214,7 @@ export const CategoryProvider = ({
 
 
 
-각각의 context API의 provider는 필요한 곳에서 감싸주려했다. 차량목록이 있다면 useParam으로 해당 차량정보도 얻을 수 있기 때문에 따로 api를 호출하지 않고 한번만 호출하게 하기 위해 Router.jsx에서 carsProvider를 감싸주었다. categoryProvider는 category를 update하고 category를 이용해 filtering된 결과를 받아오기 위해 categories와 carsList가 있는 home.tsx에서 감싸주었다.
+각각의 context API의 provider는 필요한 곳에서 감싸 주려했다. 차량 목록이 있다면 useParam으로 해당 차량 정보도 얻을 수 있기 때문에 따로 api를 호출하지 않고 한번만 호출하게 하기 위해 Router.jsx에서 carsProvider를 감싸주었다. categoryProvider는 category를 update하고 category를 이용해 filtering된 결과를 받아오기 위해 categories와 carsList가 있는 home.tsx에서 감싸주었다.
 
 
 
@@ -250,9 +249,7 @@ export default Home;
 
 ## Custom Hook
 
-이번 과제를 하면서 가장 신경썼던 포인트중 하나는 **컴포넌트의 단순화**였다. 멘토님께서 강의 해주신 "컴포넌트가 어느정도의 정보를 알고 있어야하는가", 컴포넌트의 추상화에 대해 많이 생각하면서 되도록이면 Component가 로직과 관련된 코드를 많이 가지고 있지 않고, UI 렌더링 로직만을 가지고 있게 노력했다. 그렇게 하기 위해서는 중복되거나 사용되는 로직을 다른 파일로 보관해야 했고, **custom hook**을 적극적으로 사용했다. 
-
-컴포넌트에서 어떤 context를 사용하는지 알 필요가 없기 때문에 customHook을 만들어서 사용만 할 수 있게 custom Hook을 만들었다. 
+이번 과제를 하면서 가장 신경썼던 포인트중 하나는 **컴포넌트의 단순화**였다. 멘토님께서 강의 해주신 컴포넌트의 추상화에 대해 많이 생각하면서 되도록이면 Component가 로직과 관련된 코드를 많이 가지고 있지 않고, UI 렌더링 로직만을 가지고 있게 노력했다. 그렇게 하기 위해서는 중복되거나 사용되는 로직을 다른 파일로 보관해야 했고, **custom hook**을 적극적으로 사용했다. 
 
 특히 home page의 carsList 컴포넌트는 api로 받아온 차량리스트를 카테고리에 맞게 보여줘야했다. 내부에 carsContext로부터 받아온 데이터를 filtering을 할 수도 있지만 **로직을 컴포넌트 내부에 남기고 싶지 않아** customHook으로 만들어 list만 받아올 수 있게 했다. useCarsValue 내부에서 필터링하기 때문에 컴포넌트는 엄청 간소화된 구조를 가질 수 있었다.
 
@@ -338,7 +335,7 @@ export default CarList;
 
 ## Typescript
 
-typescript는 알지만 꺼려했었다. 공부를 해도 잘 쓰는 법이 무엇인지 고민이 많이 되었기 때문에 빠른 개발을 위해서 react로 한 후에 천천히 typescript로 바꿔야지라고 생각했지만, 계속 미뤘지만 이제부터는 계속해서 사용하면서 부딪히면서 배워나가기로 마음먹었다. 이번 과제에서 typescript를 꼭 쓰고싶었던 이유는 과제의 api문서가 type까지 자세히 알려주기 때문에 적용해보고 싶은 마음이 들었다. 
+typescript는 공부를 해도 잘 쓰는 법이 무엇인지 고민이 많이 되었기 때문에 빠른 개발을 위해서 react로 한 후에 천천히 typescript로 바꿔야지라고 생각했지만, 계속 미뤄왔왔다. 이제부터는 계속해서 사용하면서 부딪히면서 배워나가기로 마음먹었다. 이번 과제는 너무 친절하게 과제의 api문서에 데이터마다 type까지 자세히 알려주기 때문에 꼭 적용해보고 싶어 적극적으로 팀에 제안했다. 
 
 
 
