--- a/_posts/2022-11-20-scope,실행컨텍스트,클로저.md
+++ b/_posts/2022-11-20-scope,실행컨텍스트,클로저.md
@@ -12,7 +12,7 @@ tags: ["javascript"]
 
 
 
-<img width="800" src="https://t1.daumcdn.net/cfile/tistory/2155063B527737B20C"/>
+<img width="500" src="https://t1.daumcdn.net/cfile/tistory/2155063B527737B20C"/>
 
 
 
@@ -134,13 +134,13 @@ foo();
 
 1. 전역 코드:
 
-   1.1 평가: 전역 실행컨텍스트를 생성하고 스택에 넣는다. var x, function foo() 를 전역컨텍스트의 전역스코프에 동록하는데 이때, **전역 객체의 프로퍼티와 				메소드**로 등록한다.
+   1.1 평가: 전역 실행컨텍스트를 생성하고 스택에 넣는다. var x, function foo() 를 전역컨텍스트의 전역스코프에 동록하는데 이때, **전역 객체의 프로퍼티와  메소드**로 등록한다.
 
 ​	   1.2 실행: x="xxx"값을 할당하고 함수를 호출하면서 foo() 함수 내부로 들어간다.
 
 2. foo 호출:
 
-   2.1 평가: foo 함수 실행컨텍스트를 생성하고 스택에 넣는다. var y, function bar()를 지역 컨텍스트의 지역스코프에 등록한다. 그리고 함수는 **arguments** 객				체가 생성되고 this 바인딩과 함께 지역 스코프에 등록한다.
+   2.1 평가: foo 함수 실행컨텍스트를 생성하고 스택에 넣는다. var y, function bar()를 지역 컨텍스트의 지역스코프에 등록한다. 그리고 함수는 **arguments** 객체가 생성되고 this 바인딩과 함께 지역 스코프에 등록한다.
 
    2.2 실행: y="yyy" 값을 할당하고 함수를 호출하면서 bar() 함수 내부로 들어간다.
 
@@ -232,7 +232,7 @@ foo();
 
 ## 블록레벨 스코프
 
-if문이나 for문과 같은 블록레벨의 스코프가 있게 되면 새롭게 렉시컬 환경을 생성한 후에, 기존의 전역 lexical 환경과 교체하고, 블록 lexical 환경은 외부 렉시컬 환경참조를 기존 lexical환경을 하는 구조가 된다. 
+if문이나 for문과 같은 블록레벨의 스코프가 있게 되면 새롭게 렉시컬 환경을 생성한 후에, 기존의 전역 lexical 환경과 교체하고, 블록 lexical 환경은 외부 렉시컬 환경참조를 기존 lexical환경으로 하는 구조가 된다. 
 
 ![img](https://velog.velcdn.com/images/93minki/post/a00bae7a-2b02-4855-8d22-34df83782503/image.png)
 
