--- a/_posts/2022-12-03-모으잡 리팩토링.md
+++ b/_posts/2022-12-03-모으잡 리팩토링.md
@@ -12,10 +12,43 @@ tags: ["project", "모으잡"]
 
 ## 🎃 느린 check 박스
 
-checkbox 기능은 해당 공고의 자격조건과 우대사항에 얼마나 해당되는지 기록하고, 50%이상일 경우 합격가능성이 높은 공고이므로 따로 표시하기 위해 추가한 기능이었다. 원래 받은
+checkbox 기능은 해당 공고의 자격 조건과 우대 사항에 얼마나 해당되는지 기록하고, 50%이상일 경우 합격가능성이 높은 공고이므로 따로 표시하기 위해 추가한 기능이었다. 원래 받은 
 
 
 
 
 
 ## Custom Hook
+
+
+
+# 크롤링의 문제
+
+이전에 크롤링에 대해 조사하면서 저작권의 문제가 생길 수 있다는 것을 인지하고는 있었다. 웹에 존재하는 정보를 받아오고 그것을 정제하는 방법이지만 데이터가 재산인 기업들의 입장에서는 예민하고 중요한 문제임은 분명했다. 이번에 원티드에서 채용공고들을 보면서 채용공고 아래 다음과 같은 문구가 적혀있는 것을 확인했다. 
+
+<img src="/assets/img/2022-12-03-모으잡 리팩토링/image-20221207200612397.png" width="800px"/>
+
+
+
+시작 전에도 학습 용도로 만들려는 서비스였지만, 먼저 확인이 필요할 것 같아 원티드 측에 직접 문의해보았다. 문의 결과는 크롤링 자체를 금지하고 있다는 답변을 받을 수 있었다.
+
+<img src="/assets/img/2022-12-03-모으잡 리팩토링/image-20221207201032505.png" width="500px"/>
+
+
+
+ 실제로 크롤링은 저작권 문제로 많은 법적 공방이 진행 중이다. 채용공고 플랫폼 사이에서 법적 공방도 있었다는 것을 찾아보면서, 어떤 방향으로 수정하면 좋을까 라는 고민이 되었다. 
+
+[실제 법적 공방에 대한 ZDNET Korea 뉴스기사 (https://zdnet.co.kr/view/?no=20170927180839)]
+
+
+
+<img src="/assets/img/2022-12-03-모으잡 리팩토링/image-20221207201250454.png" width="700px"/>
+
+
+
+지금까지 해왔던 방식의 기본은 크롤링을 이용해 데이터를 자동화해서 정리하는 방식이었다. 작업을 계속하면서 자동화라는 방식이 좋기는 하지만 크롤링 자체를 정확하게 하는 방법의 한계를 느끼기도 했고, **플랫폼에 없는 회사들도 정리할 수 있게** 하고 싶기도 했다. 
+
+이번 계기로 다른 방향으로 서비스를 기획을 수정해야 했고, 보다 사용자가 쉽게 정리할 수 있는 방법이 어떤 게 있을까 라는 고민과 채용플랫폼 시장에 대한 조사를 고민하고, 주변 사람들의 의견들을 물어보았다.
+
+
+
