모으잡 글 업데이트

--- a/_posts/2022-12-10-http통신.md
+++ b/_posts/2022-12-10-http통신.md
@@ -8,15 +8,13 @@ tags: ["browser","study"]
 
 # 😅 공부를 시작한 계기
 
-이번에 핀테크 기업의 면접을 처음으로 보면서 네트워크 통신에 대해 잘 모른다는 것을 많이 느꼈다. 가장 기본적인 http/https부터 쿠키와 로컬스토리지, 세션스토리지 등을 순서대로 정리해 보고자 한다.
+이번에 핀테크 기업의 면접을 처음으로 보면서 네트워크 통신에 대해 잘 모른다는 것을 많이 느꼈다. 가장 기본적인 http/https부터 쿠키와 로컬스토리지, 세션스토리지 등을 주제로 하나씩 정리해 보고자 한다.
 
+# 🔓 http와 https
 
+`http와 https의 차이점이 뭔가요?` 면접의 첫 질문이었다. 내 대답은 http와 https의 가장 큰 차이점은 **보안**에 있습니다 였다. 면접관님께서 주신 다음 질문은 그럼 "어떤 보안 방식으로 처리가 되나요?"였다. 분명히 보안이 좋아지는 것은 알지만 어떤 방식을 이용해서 보안이 좋아지는 지는 몰라 모르겠다고 답할 수 밖에 없었다.
 
-## 🔓 http와 https
-
-`http와 https의 차이점이 뭔가요?` 면접의 첫 질문이었다. 내 대답은 http와 https의 가장 큰 차이점은 **보안**에 있습니다 였다. 그러자 다음 질문들어온 그럼 "어떤 보안 방식으로 처리가 되나요?". 분명히 보안이 좋아지는 것은 알지만 어떤 방식을 이용해서 보안이 좋아지는 지는 몰라 모르겠다고 답할 수 밖에 없었다.
-
-http와 https는 보안에 차이점이 있다. 각각에 대해 정의하고 그 차이점을 좀 더 파헤쳐 보자.
+http와 https는 보안에 차이점이 있다. 각각에 대해 정의하고 내가 뭘 대답하지 못했는지 그 차이점을 좀 더 파헤쳐 보자.
 
 <img src="https://seopressor.com/wp-content/uploads/2017/07/HTTP-vs-HTTPS.png" width="700"/>
 
