모으잡 글 업데이트

--- a/_posts/2022-10-19-Express 기초.md
+++ b/_posts/2022-10-19-Express 기초.md
@@ -1,7 +1,7 @@
 ---
-title: "모으잡-express 공부"
-categories: 모으잡
-tags: ["project", "모으잡"]
+title: "NodeJS: express"
+categories: NodeJS
+tags: ["express", "NodeJS"]
 ---
 
 # ✨ Express
@@ -76,5 +76,4 @@ app.use((req, res, next) => {
 
 
 미들웨어는 이렇게 우리가 직접 사용할 수 있는 것 외에도 express 내장 미들웨어나 npm에 올라와있는 유용한 미들웨어도 있다. json으로 값을 파싱해서 받아올 수 있는 **express.json()**이나 cors에러를 해결해주는 **cors 미들웨어**, 나 보안에 필요한 헤더를 추가해주는 **helmet 미들웨어**가 있다. 사용할 때는 동일하게 app.use(middleware)로 전달해서 사용할 수 있다.
-
 
