--- a/_posts/typescript/_posts/2023-01-10-타입시스템(2).md
+++ b/_posts/typescript/_posts/2023-01-10-타입시스템(2).md
@@ -6,7 +6,7 @@ tags: ["typescript"]
 
 # 🎚 타입 시스템(2)
 
-저번 정리에 이어 타입 시스템에 대해서 정리해보자 한다.
+타입스크립트의 타입 시스템 중 **객체 래퍼 타입, 잉여 속성 체크, 함수 표현식, 타입과 인터페이스의 차이**에 대해서 정리해보자 한다.
 
 
 
