--- a/_posts/typescript/_posts/2023-01-02-타입스크립트란.md
+++ b/_posts/typescript/_posts/2023-01-02-타입스크립트란.md
@@ -5,7 +5,7 @@ categories:
 tags: ['Typescript']
 ---
 
-타입스크립트로 기본적인 타입을 정하고 사용하고 있지만, 매번 막히는 문제들이 있어 [이펙티브 타입스크립트](https://search.shopping.naver.com/book/catalog/32473346832)를 읽고 정리해나가려 한다.
+타입스크립트로 기본적인 타입을 정하고 사용하고 있지만, 매번 막히는 문제들과 잘 사용하는 기준을 세우기 위해  [이펙티브 타입스크립트](https://search.shopping.naver.com/book/catalog/32473346832)를 읽고 정리해나가려 한다.
 
 # 🙄 타입 스크립트란
 
