--- a/_posts/javascript/_posts/2022-11-20-scope,실행컨텍스트,클로저.md
+++ b/_posts/javascript/_posts/2022-11-20-scope,실행컨텍스트,클로저.md
@@ -109,7 +109,7 @@ foo();
 
    1.1 평가: 전역 실행컨텍스트를 생성하고 스택에 넣는다. var x, function foo() 를 전역컨텍스트의 전역스코프에 동록하는데 이때, **전역 객체의 프로퍼티와 메소드**로 등록한다.
 
-​ 1.2 실행: x="xxx"값을 할당하고 함수를 호출하면서 foo() 함수 내부로 들어간다.
+ 1.2 실행: x="xxx"값을 할당하고 함수를 호출하면서 foo() 함수 내부로 들어간다.
 
 2. foo 호출:
 
@@ -185,15 +185,15 @@ foo();
 
 ### 4. bar 함수 종료
 
-​ 함수종료후 실행컨텍스트 스택에서 제거되어 실행 중인 실행 컨텍스트는 foo가 된다. 이때 중요한 것은 **실행컨텍스트 스택에서 bar가 사라진다고 해서 bar의 lexical 환경까지 제거되지는 않는다.** 제거되는 것은 아무도 참조하고 있지 않을 때 GC에 의해 제거되어진다.
+ 함수종료후 실행컨텍스트 스택에서 제거되어 실행 중인 실행 컨텍스트는 foo가 된다. 이때 중요한 것은 **실행컨텍스트 스택에서 bar가 사라진다고 해서 bar의 lexical 환경까지 제거되지는 않는다.** 제거되는 것은 아무도 참조하고 있지 않을 때 GC에 의해 제거되어진다.
 
 ### 5. foo 함수 종료
 
-​ 함수종료후 실행컨텍스트 스택에서 제거되어 실행 중인 실행 컨텍스트는 전역컨텍스트가 된다.
+ 함수종료후 실행컨텍스트 스택에서 제거되어 실행 중인 실행 컨텍스트는 전역컨텍스트가 된다.
 
 ### 6. 전역 코드 종료
 
-​ 실행할 코드가 더 이상 없으면 전역 코드도 종료되면서 실행컨택스트 스택에서 제거된다.
+ 실행할 코드가 더 이상 없으면 전역 코드도 종료되면서 실행컨택스트 스택에서 제거된다.
 
 ## 블록레벨 스코프
 
