--- a/_posts/review/_posts/2022-11-04-원티드 프리온보딩-2-1 과제 회고.md
+++ b/_posts/review/_posts/2022-11-04-원티드 프리온보딩-2-1 과제 회고.md
@@ -2,7 +2,8 @@
 title: '원티드 프리온보딩 2-1 과제회고'
 layout: single
 categories:
-  - wanted-preonboarding
+  - wanted-preonboarding	
+  - review
 ---
 
 # 📜 과제 설명
