--- a/_posts/review/_posts/2022-10-31-원티드 프리온보딩-1-2 과제 회고.md
+++ b/_posts/review/_posts/2022-10-31-원티드 프리온보딩-1-2 과제 회고.md
@@ -2,7 +2,8 @@
 title: '원티드 프리온보딩 1-2 과제회고'
 layout: single
 categories:
-  - wanted-preonboarding
+  - wanted-preonboarding	
+  - review
 ---
 
 # 🧨1-2 과제 회고
