--- a/_posts/review/_posts/2022-11-19-원티드 프리온보딩 마지막 과제회고.md
+++ b/_posts/review/_posts/2022-11-19-원티드 프리온보딩 마지막 과제회고.md
@@ -3,6 +3,7 @@ title: '원티드 프리온보딩 마지막 과제회고'
 layout: single
 categories:
   - wanted-preonboarding
+  - review
 ---
 
 드디어 프리온보딩 코스의 마지막 과제가 되었다. 정리했던 NEXT JS를 공부한 내용과 과제를 하면서 해결해나간 에러들, 멘토님의 피드백을 받았던 부분들을 작성해 보고자 한다.
