--- a/_posts/web/_posts/2023-01-23-Vite와 번들러.md
+++ b/_posts/web/_posts/2023-01-23-Vite와 번들러.md
@@ -1,8 +1,8 @@
 ---
-title: 'Vite가 왜 빠를까?'
+title: 'Vite는 왜 빠를까'
 layout: single
-categories: web
-tags: ['browser', 'study']
+categories:
+  - web
 ---
 
 
