--- a/_posts/typescript/_posts/2023-01-16-타입시스템(3).md
+++ b/_posts/typescript/_posts/2023-01-16-타입시스템(3).md
@@ -1,5 +1,5 @@
 ---
-title: "TS study: 타입 시스템(3)"
+title: "TS study: 타입 시스템 (3)"
 categories: typescript
 tags: ["typescript"]
 ---
@@ -419,3 +419,75 @@ o.inner = { x: 1 }; // Cannot assign to 'inner' because it is a read-only proper
 // };
 ```
 
+
+
+## 😏 Mapping된 타입을 이용해 값 동기화하기
+
+```typescript
+interface ScatterProps {
+  xs: number[];
+  ys: number[];
+  xRange: [number, number];
+  yRange: [number, number];
+  color: string;
+  onClick: (x: number, y: number, index: number) => void;
+}
+
+function shouldUpdate(
+  oldProps: ScatterProps,
+  newProps:ScatterProps
+) {
+  let k: keyof ScatterProps;
+  for (k in oldProps) {
+    if (oldProps[k] !== newProps[k]) {
+      if (k !== "onClick") return true;
+    }
+  }
+  return false;
+}
+```
+
+위 예제에서 `ScatterProps` interface를 이용해서 현재 Props와 newProps를 비교해 props가 변경될 경우 지도를 다시 그리는 예제를 담고 있다. 실제 리액트에서 컴포넌트가 re-rendering되는 조건 중 하나가 props나 상태가 바뀌는 경우로 기존 props와의 차이를 `얕은 비교`를 통해 비교한다.
+
+현재 정의된 shouldUpdate에서 `onClick`함수 변화는 업데이트에 영향을 주지 않게 설정되어 있다. 하지만 만약 새로운 속성이 추가되는 경우에 항상 true이기 때문에 너무 자주 새로 그려지게 된다. 이점을 막기 위해서 다음과 같은 코드로 수정할 수 있다.
+
+```typescript
+function shouldUpdate(oldProps: ScatterProps, newProps: ScatterProps) {
+  return (
+    oldProps.xs !== newProps.xs ||
+    oldProps.ys !== newProps.ys ||
+    oldProps.xRange !== newProps.xRange ||
+    oldProps.yRange !== newProps.yRange ||
+    oldProps.color !== newProps.color
+  );
+}
+```
+
+위 코드는 일일이 속성들의 변화를 체크하는 방식으로 매번 새로운 속성이 추가될 때마다 작성해 주어야 하므로 비효율적이다. 
+
+좀 더 이상적인 방법은 새로운 속성이 추가될 때 타입체커와 매핑된 타입,객체를 이용하는 코드다. 다음 예제를 보자.
+
+```typescript
+const REQUIRES_UPDATE: { [k in keyof ScatterProps]: boolean } = {
+  xs: true,
+  ys: true,
+  xRange: true,
+  yRange: true,
+  color: true,
+  onClick: false,
+};
+
+function shouldUpdate(oldProps: ScatterProps, newProps: ScatterProps) {
+  let k: keyof ScatterProps;
+  for (k in oldProps) {
+    if (oldProps[k] !== newProps[k] && REQUIRES_UPDATE[k]) {
+      return true;
+    }
+  }
+  return false;
+}
+```
+
+keyof를 이용해 Update가 필요한 속성들에 대해 명시해두고, true로 설정해놓은 속성이 변화했을 때만 업데이트될 수 있게 정의했다. 타입과 값이 동기화 되어 있기 때문에 새로운 속성이 추가되어도 바로 에러가 발생해 알려줄 수 있다.
+
+ 
