--- a/_posts/typescript/_posts/2023-01-24-타입추론 (1).md
+++ b/_posts/typescript/_posts/2023-01-24-타입추론 (1).md
@@ -143,35 +143,167 @@ function getComponent(vector: Vector3, axis: 'x' | 'y' | 'z') {
   return vector[axis];
 }
 
-let x = 'x';
+let x = 'x'; 
 let vec = { x: 10, y: 20, z: 30 };
 getComponent(vec, x); // Argument of type 'string' is not assignable to parameter of type '"x" | "y" | "z"'
 ```
 
 위 예제에서 `let x= 'x'`로 선언되어 x변수에는 할당할 수 있는 타입을 고려해 string타입으로 추론했다. 그렇기 때문에 정확히 `"x" | "y" | "z"`가 필요한 `getComponent`함수의 인자로 전달 시 타입 에러가 발생했다.
 
-이러한 문제를 해결하기 위해서는 간단하게 `let`대신 **const**로 수정할 수 있다. `const`로 선언하면 `x`의 타입이 `'x'`가 되어 타입이 더 좁혀지기 때문에 앞서 발생한 에러를 막을 수 있다. 
+이러한 문제를 해결하기 위해서는 간단하게 `let`대신 `const`로 수정할 수 있다. `const`로 선언하면 `x`의 타입이 `'x'`가 되어 타입이 더 좁혀지기 때문에 앞서 발생한 에러를 막을 수 있다. 
 
-하지만 `const`로 선언하는 방법은 객체와 배열에서는 여전히 문제가 된다. 배열의 경우의 `const x= [1,2,3]`라고 했을 때 `number[]`로 봐야할 지 `[number,number,number]`로 해야할 지 다양한 타입이 가능하다. 
+하지만 `const`로 선언하는 방법은 객체와 배열에서는 여전히 문제가 된다. 배열의 경우의 `const x= [1,2,3]`라고 했을 때 `number[]`로 봐야할 지 `[number,number,number]`로 해야할 지 타입추론만으로는 어렵다.  
 
 이러한 문제점을 해결하기 위해서는 먼저 명시적 타입을 전달해 주는 방법이 있다. 정확히 내가 원하는 타입으로 정해줄 수 있다.
 
 ```typescript
-const arr = [1, 2, 3]; //number[]
+const arr = [1, 2, 3]; // number[]
 const arr2:[number,number,number]=[1,2,3]
 ```
 
 두 번째로는 `as const` 타입 단언을 통해 최대한 좁은 타입으로 추론하는 방법이 있다.
 
 ```typescript
-const arr = [1, 2, 3] as const; // readonly [1,2,3]
+const arr = [1, 2, 3] as const; // readonly [1,2,3] 
 ```
-
-readonly로 최대한 좁은 타입으로 정해 줄 수 있다.
 
 
 
 ## 🙏 타입 좁히기
+
+#### null 체크/ undefined 체크
+
+타입 좁히기를 내가 가장 많이 썼던 경우는 `null` 체크 또는 `undefined` 체크였던 것 같다. 책에서도 대표적인 예시로 null 체크를 보여준다. 
+
+``` typescript
+const el = document.getElementById("foo");  // HTMLElement | null
+if (!el) throw new Error("Unable to find #foo");
+el.innerHTML = "Party Time".blink();
+```
+
+위 예제에서 `el`값이 null이 될 수 있기 때문에 조건문으로 분기 처리를 해준 것을 볼 수 있다. 
+
+
+
+####  instanceof와 내장 함수 
+
+`instanceof`와 내장 함수를 이용해 타입을 좁힐 수 있다.  `instanceof`를 이용 시에 중요했던 점은 런타임 연산자로 prototype chain에 해당 타겟이 있는지 확인하고 값을 확인하는 것을 이해하고 사용해야 한다.
+
+```typescript
+function contains(text: string, search: string | RegExp) {
+  if (search instanceof RegExp) {
+    search;
+    return !!search.exec(text);
+  }
+  return text.includes(search);
+}
+
+function contains(text: string, terms: string | string[]) {
+  const termList = Array.isArray(terms) ? terms : [terms];
+  termList
+}
+```
+
+
+
+#### 속성체크와 discriminated Union Type
+
+또 다른 타입을 좁히는 방법으로 객체 타입의 경우 속성 체크를 이용해 좁힐 수 있고, 공통의 속성의 다른 값을 가지게 하는 `discriminated union` 구별된 유니온 타입을 이용할 수 있다. 실제 사용 경험은 속성 체크와 discriminated Union Type은 union Type으로 전달한 props를 분기 처리하기 위해 많이 사용했다.
+
+```typescript
+interface A {
+  a: number;
+}
+interface B {
+  b: number;
+}
+
+function pickAB(ab: A | B) {
+  if ('a' in ab) {
+    ab;
+  } else {
+    ab;
+  }
+  ab;
+}
+
+
+interface UploadEvent {
+  type: 'upload';
+  filename: string;
+  contents: string;
+}
+interface DownloadEvent {
+  type: 'download';
+  filename: string;
+}
+
+type AppEvent = UploadEvent | DownloadEvent;
+
+function handleEvent(e: AppEvent) {
+  switch (e.type) {
+    case 'download':
+      e; // DownloadEvent
+      break;
+    case 'upload': 
+      e; // UploadEvent
+      break;
+  }
+}
+```
+
+
+
+#### 사용자 정의 타입 가드
+
+타입을 좁히기 위한 마지막 방법으로 함수를 이용해 내가 원하는 타입으로 좁혀줄 수 있다.
+
+```typescript
+function isInputElement(el: HTMLElement): el is HTMLInputElement {
+  return 'value' in el;
+}
+
+function getElementContent(el: HTMLElement) {
+  if (isInputElement(el)) {
+    el; // HTMLInputElement
+    return el.value;
+  }
+  el; // HTMLElement
+  return el.textContent;
+}
+
+```
+
+
+
+## 한꺼번에 객체 생성하기
+
+객체를 생성할 때 주의할 점은 동적으로 속성을 추가하기 보다 필요한 속성들을 한번에 생성해야 타입추론의 이점을 이용할 수 있다.
+
+```typescript
+const pt = {};
+pt.x = 3; // Property 'x' does not exist on type '{}'.
+pt.y = 4; // Property 'y' does not exist on type '{}'.
+```
+
+위 예제에서는 처음 pt가 `{}`로 추론되기 때문에 에러가 발생했다. 이러한 원칙은 기존 객체 내용을 이용해 새로운 객체를 만들 때에도 동일하게 적용된다.
+
+```typescript
+const pt = { x: 3, y: 4 };
+const id = { name: 'Pythagoras' };
+const namedPoint = {};
+Object.assign(namedPoint, pt, id);
+namedPoint.name; // Property 'name' does not exist on type '{}'.
+```
+
+위 예제는 `namedPoint`는 동일하게 `{}`를 기준으로 추론이 되어 `Object.assign()`메소드를 이용해서 속성을 추가해도 에러가 발생되었다. 이점을 해결하기 위해서는 `spread operator`를 이용할 수 있다.
+
+```typescript
+const namedPoint = { ...pt, ...id }; // const namedPoint: {name: string; x: number; y: number;}
+namedPoint.name;
+```
+
+
 
 
 
