--- a/_posts/react/_posts/2023-01-23-리액트의 기본원리.md
+++ b/_posts/react/_posts/2023-01-23-리액트의 기본원리.md
@@ -32,6 +32,86 @@ categories:
 
 
 
+## 😀 제어 컴포넌트와 비제어 컴포넌트
+
+`제어 컴포넌트`와 `비제어 컴포넌트`는 면접에서 처음들은 단어였다. 각각에 대해 설명해 보라는 질문에 바로 잘 모르겠다 했지만 input과 form을 생각하면 답할 수 있을 것 같다고 힌트를 주셔서 `제어 컴포넌트`에 대해서 만 설명할 수 있었다.
+
+#### 제어 컴포넌트
+
+제어 컴포넌트는 model에 해당하는 data, 즉 상태와 바인딩되어 상태에 따라 값이 바뀌는 컴포넌트라고 할 수 있다. 예로 `input`의 경우 사용자의 입력을 통해 상태를 업데이트하고 업데이트한 상태를 `value`속성으로 전달해줘 **상태와 항상 동기화될 수 있게** 한다.
+
+
+
+```jsx
+import { useState } from 'react';
+
+const App = () => {
+    const [value, setValue] = useState('');
+    const handleChange = e => {
+        setName(e.target.value);
+    };
+    
+    return(
+    	<form onSubmit={handleSubmit}>
+            <input 
+             	type="text"
+                placeholder="Enter Name"
+                value={value}
+                onChange={handleChange}
+            />
+            <button>Add</button>
+        </form>
+    );
+};
+
+export default App;
+```
+
+익숙한 위 코드 모습에서 과정을 정리해보면 1) 사용자가 입력한다. 2) 입력된 값을 `onChange`함수를 통해 상태를 변경한다. 3) 상태를 value로 반영한다 로 세가지 step으로 볼 수 있다.
+
+
+
+### 비제어 컴포넌트
+
+비제어 컴포넌트는 제어 컴포넌트와 달리 입력에 따라 상태를 업데이트 시키고 상태와 컴포넌트를 바인딩하는 것이 아니라, DOM요소에 접근해 입력된 값을 받아오는 방식이다.
+
+```jsx
+import { useRef } from 'react';
+
+const App = () => {
+    const inputRef = useRef();
+
+    const handleSubmit = (event)=> {
+      event.preventDefault();
+      const name = inputRef.current.value;
+   console.log("Input value - ", this.inputRef.current.value);
+    };
+    
+    return(
+    	<form
+        onSubmit={handleSubmit}
+      >
+        <div>
+          <label>Uncontrolled input </label>
+          <input type="date" name="data" id="date-input" ref={this.inputRef} />
+        </div>
+
+        <button type="submit">Submit</button>
+      </form>
+    );
+};
+
+export default App;
+```
+
+위 코드에서 과정을 정리해보면 1) 사용자가 입력한다 2) 버튼을 누른다 3) `submit`이벤트가 발생하고 DOM요소에 접근해 값을 콘솔로 호출한다로 정리할 수 있다.
+
+
+
+이렇게 두 가지 과정을 비교해 보았을 때 가장 큰 차이점은 **상태와 동기화가되냐 안되냐**라는 점이다. 제어 컴포넌트의 경우 state가 바뀔 때마다 값이 바뀌기 때문에 리랜더링이 계속해서 일어나게 되는 반면 비제어 컴포넌트는 state와 상관없이 이벤트가 발생했을 때만 값을 참조한다. 그렇기 때문에 둘 중에 어떤 것을 사용할 지는 **데이터를 실시간에 맞게 UI를 보여줘야하냐 아니냐**로 구분해서 사용할 수 있다.
+
+
+
 ### 🧨 리액트의 re-rendering 조건과 불필요한 re-rendering 막기
 
 Re-rendering의 조건은 크게 2가지로 볼 수 있다.
