--- a/_posts/review/_posts/2022-11-30-지스트 청원 서비스 회고.md
+++ b/_posts/review/_posts/2022-11-30-지스트 청원 서비스 회고.md
@@ -21,7 +21,7 @@ categories:
 
 학교에 학생들의 문제를 전달하는 방법이 어떤 것이 있을지 고민했고, 당시 청와대의 국민 청원 페이지가 있어 사람들의 많은 공감과 동의를 받고 있었고, 우리도 **학교 내의 청원 페이지를 만들어 보는 게 어떨까**라는 생각으로 이어졌다. 당시 아직 학교가 우리의 서비스를 이용할 지 정해지지 않은 상태였지만 학교와 학생들 사이의 소통 창구가 될 수 있기를 바라는 마음으로, 그렇게 지스트 청원서비스가 시작되었다.
 
-<img src="/assets/img/2022-11-30-지스트 청원 서비스 회고/image-20221130154414471.png" width="800px">
+<img src="./../../../assets/img/2022-11-30-지스트 청원 서비스 회고/image-20221130154414471.png" width="800px">
 
 ## 🎨 서비스의 얼굴, 디자인의 시작
 
@@ -29,7 +29,7 @@ categories:
 
 [ Figma에 함께 디자인한 청원 서비스 페이지 ]
 
-<img src="/assets/img/2022-11-30-지스트 청원 서비스 회고/image-20221130155536454.png" width="800px">
+<img src="../../../assets/img/2022-11-30-지스트 청원 서비스 회고/image-20221130155536454.png" width="800px">
 
 ## 👓 디자인했으니 이제 만들자, 페이지 스타일링
 
@@ -37,7 +37,7 @@ categories:
 
 [issue로 등록하고 작업해서 올린 PR]
 
-<img src="/assets/img/2022-11-30-지스트 청원 서비스 회고/image-20221130163000959.png" width="800px">
+<img src="../../../assets/img/2022-11-30-지스트 청원 서비스 회고/image-20221130163000959.png" width="800px">
 
 ## 🔑 내가 담당한 회원가입/ 회원정보 변경 페이지
 
