--- a/_posts/review/_posts/2023-03-31-개발자-한달차-회고.md
+++ b/_posts/review/_posts/2023-03-31-개발자-한달차-회고.md
@@ -57,7 +57,7 @@ categories:
 
 [모바일 팀의 배포 사이클을 정리한 그림 ]
 
-![Main](/../../../assets/img/2023-03-31-개발자-한달차-회고/Main.jpg)
+![Main](./../../../assets/img/2023-03-31-개발자-한달차-회고/Main.jpg)
 
 부족한 그림과 설명이지만 내가 한달동안 이해한 배포 사이클을 정리해보았다. 여기에 비정기배포나 hotfix가 나가야하는 경우는 아직 겪어보지 않아 따로 정리하지 않았다.
 
@@ -91,7 +91,7 @@ git rm -r --cached filename
 
 [당시 발생했던 tsc 에러]
 
-![image-20230402155550414](/../../../assets/img/2023-03-31-개발자-한달차-회고/image-20230402155550414.png)
+![image-20230402155550414](../../../assets/img/2023-03-31-개발자-한달차-회고/image-20230402155550414.png)
 
 
 
