--- a/_posts/review/_posts/2022-10-31-원티드 프리온보딩-1-2 과제 회고.md
+++ b/_posts/review/_posts/2022-10-31-원티드 프리온보딩-1-2 과제 회고.md
@@ -245,9 +245,11 @@ const IssueList = () => {
 export default IssueList;
 
 ```
+ <br/>
 
-<img width="800px" src="/assets/img/2022-10-31-원티드 프리온보딩-1-2 과제 회고/ad에러.PNG"></img>
-
+<img width="800px" src="/assets/img/2022-10-31-원티드 프리온보딩-1-2 과제 회고/ad에러.PNG"/>
+ 
+<br/> 
 어디서 계속해서 에러가 나오는지 찾는 중에 issueItem에 key값을 주었기 때문에 에러가 발생되었다는 것을 알게되었다. 해결하기 위해서 fragment가 아니라 div로 감싸주고 div에 key값을 전달해줘 에러를 해결할 수 있었다.
 
 ```react
@@ -471,7 +473,7 @@ const IssueList = () => {
 
 ```
 
-<img width="800" src="https://user-images.githubusercontent.com/83333409/198885336-38510ffe-0e24-4010-9229-ab53ea785dcc.png"></img>
+<img width="800" src="https://user-images.githubusercontent.com/83333409/198885336-38510ffe-0e24-4010-9229-ab53ea785dcc.png"/>
 
 ## 마치며
 
