--- a/_posts/review/_posts/2022-11-07-원티드 프리온보딩-2-2 과제 회고.md
+++ b/_posts/review/_posts/2022-11-07-원티드 프리온보딩-2-2 과제 회고.md
@@ -125,7 +125,7 @@ export default class HTTPError extends Error {
 
 [adService의 type을 interface로 전달해주기 전의 에러]
 
-<img width="800" src="../assets/img/2022-11-07-원티드 프리온보딩-2-2 과제 회고/context에 class instance를 넣으려하니 생긴에러.PNG">
+<img width="800" src="/assets/img/2022-11-07-원티드 프리온보딩-2-2 과제 회고/context에 class instance를 넣으려하니 생긴에러.PNG">
 
 여기서 조금 주의할 부분은 전달하면서 instance가 this를 잃어버린다는 점이다. 그래서 bind로 adService를 binding을 해주거나, method 자체를 **arrow function**으로 바꾸게 되면, this binding 문제를 해결할 수 있다.
 
@@ -305,7 +305,7 @@ const obj: Type = {
 
 # 😥아쉬웠던 점
 
-이번 과제는 너무 디테일한 UI들과 selector를 이용해 받은 데이터들을 필터 해야 하는 부분들이 많아, 완전히 구현하지 못했다. 필터링 로직을 많이 구현하다 시간이 없어 그래프의 형식들도 신경 쓰지 못했고, adList 데이터로 수정하기 부분도 구현하지 못했다. 아직 너무 많이 부족하다는 것을 많이 느낀다. 코딩을 하면서 저번에 했던 코드를 복사해 수정해서 사용하다 보니, ""정말 내가 이 코드들을 제대로 작성할 수 있을까""라는 생각도 들고, 부족함에 좌절하기도 많이 했다.
+이번 과제는 너무 디테일한 UI들과 selector를 이용해 받은 데이터들을 필터 해야 하는 부분들이 많아, 완전히 구현하지 못했다. 필터링 로직을 많이 구현하다 시간이 없어 그래프의 형식들도 신경 쓰지 못했고, adList 데이터로 수정하기 부분도 구현하지 못했다. 아직 너무 많이 부족하다는 것을 많이 느낀다. 코딩을 하면서 저번에 했던 코드를 복사해 수정해서 사용하다 보니, "정말 내가 이 코드들을 제대로 이해하고 있는 걸까"라는 생각도 들고, 부족함에 좌절하기도 많이 했다.
 
 그래도 매번 과제를 하면서 내가 가진 장점은, 프로젝트 내의 **문제점을 잘 찾는다**는 점과 **배운 것을 적용할 수 있는 능력**이라고 생각한다. 내 프로젝트에서 부족한 점들을 기록해서 최대한 채웠고, 멘토님이 말씀해 주셨던 부분들을 담아서 코딩하다 보니 이전과는 다른 시야와 다른 수준으로 코딩하고 있다는 생각을 한다.
 
