--- a/_posts/review/_posts/2022-11-04-원티드 프리온보딩-2-1 과제 회고.md
+++ b/_posts/review/_posts/2022-11-04-원티드 프리온보딩-2-1 과제 회고.md
@@ -11,11 +11,9 @@ categories:
 
 ## UseReducer와 Context API
 
-처음 과제부터 계속해서 사용해와서 조금은 익숙해진 context API와 useReducer를 이번에 함께 사용해보았다. 다른 팀의 저번과제의 코드들과 [velopert님의 글](https://react.vlpt.us/)을 참고해서 코드를 구성했다.
+처음 과제부터 계속해서 사용해와서 조금은 익숙해진 context API와 useReducer를 이번에 함께 사용해보았다. 다른 팀의 저번과제의 코드들과 [Velopert님의 글](https://react.vlpt.us/)을 참고해서 코드를 구성했다.
 
 ### UseReducer
-
-<img width="800px" src="https://dmitripavlutin.com/static/c47eb25d68bef042100d2b32083d7c0a/59014/cover.png">
 
 useReducer는 중첩된 상태나 여러가지 상태를 하나의 오브젝트로 묶어서 관리할 때 등, 복잡한 상태관리 로직을 간단하게 처리할 수 있는 react hook이다. useReducer의 로직은 useState와 유사하게, 우리가 관리해야 할 **상태**가 있고, 상태를 어떻게 처리할지를 담고 있는 **action**과 전달받은 action에 따라 처리해주는 **dispatch**가 있다.
 
@@ -381,8 +379,9 @@ React에서 SSR을 하기 위해서는 Next.js를 사용하면 된다. 하지만
 react-helmet은 react 라이브러리로 index.html의 head 내용을 동적으로 바꿀 수 있는 라이브러리이다. 과제에 필요한 내용들을 각 detail 페이지의 정보에 맞게 head 내용을 바꾸기 위해 meta 컴포넌트를 만든 후에 정보를 담아주었다. 그결과 페이지에서 잘바뀌어있는 것을 확인할 수 있었다.
 
 <img width="800" src="https://user-images.githubusercontent.com/104304569/199743653-4db5c757-19ed-44d5-b238-1a94bc88a255.png">
+<br/>
 
-```
+```react
 import { Helmet } from 'react-helmet-async';
 
 const Meta = ({ attribute, amount, id }: MetaProps) => {
@@ -516,6 +515,6 @@ export default class HTTPError extends Error {
 }
 ```
 
-### 📢마치며
+### 📢 마치며
 
 이번 기회를 통해서 왜 기업이 SEO를 고려하는지, SEO를 해결하는 방식으로 SSR을 이용해야하는 이유를 체감할 수 있었다. 무조건 SSR이 좋고 유행하니까 해야된다는 생각보다 어떤 문제를 해결하기 위해 나왔고 이것을 어디에 적용해야하는 지 알게되었고, Next.js를 공부해보고 싶다는 의욕이 더 생기는 계기가 되었다. 하나를 완벽하게 하고 다음을 해야하지 않나 생각도 하지만, 이번에 next.js를 몰라서 적용을 못했다는 아쉬움이 생겨, **내가 사용할 수 있는 도구를 늘이는 과정도 필요하다**는 깨우침도 생겼다.
