--- a/_posts/review/_posts/2023-03-31-개발자-한달차-회고.md
+++ b/_posts/review/_posts/2023-03-31-개발자-한달차-회고.md
@@ -91,7 +91,7 @@ git rm -r --cached filename
 
 [당시 발생했던 tsc 에러]
 
-![image-20230402155550414](../../../assets/img/2023-03-31-개발자-한달차-회고/image-20230402155550414.png)
+![image-20230402155550414](./../../..//assets/img/2023-03-31-개발자-한달차-회고/image-20230402155550414.png)
 
 
 
@@ -246,4 +246,4 @@ return (
 
 [참고]
 
-- Jimmy Lee: https://medium.com/@jimmy_58380/%EB%AA%A8%EB%B0%94%EC%9D%BC-%EC%95%B1-%EB%A7%A4%EC%A3%BC-%EB%B0%B0%ED%8F%AC%ED%95%98%EA%B8%B0-%EA%B7%9C%EC%B9%99-%EC%A0%95%ED%95%98%EA%B8%B0-2fd03c65484
+- [Jimmy Lee 블로그](https://medium.com/@jimmy_58380/%EB%AA%A8%EB%B0%94%EC%9D%BC-%EC%95%B1-%EB%A7%A4%EC%A3%BC-%EB%B0%B0%ED%8F%AC%ED%95%98%EA%B8%B0-%EA%B7%9C%EC%B9%99-%EC%A0%95%ED%95%98%EA%B8%B0-2fd03c65484)
