--- a/_posts/typescript/_posts/2023-01-02-타입스크립트란.md
+++ b/_posts/typescript/_posts/2023-01-02-타입스크립트란.md
@@ -359,6 +359,6 @@ let me: any = { first: 'YJ' };
 
 [참조]
 
-[기술서적 리뷰] 이펙티브 타입스크립트 - 1. 타입스크립트 알아보기:https://yhancsx.github.io/js/effective-typescript-ch1/
+[기술서적 리뷰, 이펙티브 타입스크립트 - 1. 타입스크립트 알아보기](https://yhancsx.github.io/js/effective-typescript-ch1/)
 
-이펙티브 타입스크립트: https://search.shopping.naver.com/book/catalog/32473346832
+[이펙티브 타입스크립트] (https://search.shopping.naver.com/book/catalog/32473346832)
