--- a/_posts/typescript/_posts/2023-01-10-타입시스템(2).md
+++ b/_posts/typescript/_posts/2023-01-10-타입시스템(2).md
@@ -286,4 +286,4 @@ interface는 type과는 다르게 속성을 같은 이름의 interface을 선언
 
 [참조]
 
-이펙티브 타입스크립트: https://search.shopping.naver.com/book/catalog/32473346832
+[이펙티브 타입스크립트](https://search.shopping.naver.com/book/catalog/32473346832)
